--- a/f2h2h1.github.io/在Windows下配置PHP服务器.html
+++ b/f2h2h1.github.io/在Windows下配置PHP服务器.html
@@ -305,6 +305,15 @@ sh 下的绝对路径
 </li>
 </ol>
 <h2>Apache</h2>
+&lt;!--
+
+https，http2
+目录索引，cgi，fcgi，重定向，url重写，反向代理，负载均衡，虚拟站点
+WebSocket，WebSocket Secure
+Basic认证，Digest认证
+
+--&gt;
+
 <h3>下载 Apache</h3>
 <pre><code class="lang-plaintext">https://www.apachelounge.com/download/
 </code></pre>
