--- a/kexizeroing.github.io/Intro to TypeScript.html
+++ b/kexizeroing.github.io/Intro to TypeScript.html
@@ -351,6 +351,8 @@ type SellAlbumReturn = ReturnType&lt;typeof sellAlbum&gt;  // number
 // unwrap the Promise type and provide the type of the resolved value
 type User = Awaited&lt;ReturnType&lt;typeof fetchUser&gt;&gt;
 
+type CustomAwaited&lt;T&gt; = T extends Promise&lt;infer U&gt; ? U : T
+
 // Indexed access types
 type AlbumTitle = Album["title"];
 type AlbumPropertyTypes = Album["title" | "isSingle" | "releaseYear"];
@@ -376,6 +378,10 @@ type Headers = {
 type ColorShade = 100 | 200 | 300;
 type Color = "red" | "blue" | "green";
 type ColorPalette = `${Color}-${ColorShade}`;
+
+// "name:Bill" -&gt; { key: "name", value: "Bill" }
+type KeyValueSplitter&lt;T extends string&gt; = T extends `${infer K}:${infer V}` ? 
+  { key: K; value: V } : never;
 
 // The 'string &amp; {}' trick (loose autocomplete)
 type ModelNames = 'a' | 'b' | 'c' | (string &amp; {});
@@ -520,7 +526,7 @@ type AlbumWithUppercaseKeys = {
 };
 
 type AttributeGetters = {
-  [K in keyof Attributes as `get${Capitalize&lt;K&gt;}`]: () =&gt; Attributes[K];
+  [K in keyof T as `get${Capitalize&lt;K&gt;}`]: () =&gt; T[K];
 };
 </code></pre>
 <p><strong>Generic Types</strong>: Instead of working with a specific type, we work with a parameter that is then substituted for a specific type. Type parameters are denoted within angle brackets at function heads or class declarations. <a href="https://ts.chibicode.com/generics">Generics are not scary</a>. They’re like regular function parameters, but instead of values, it deals with types.</p>
