--- a/kexizeroing.github.io/Node.js learning notes.html
+++ b/kexizeroing.github.io/Node.js learning notes.html
@@ -146,7 +146,23 @@ console.log(process.env.USER_KEY); // "foobar"
 <li><code>packageJson.exports["."] = filepath</code> is shorthand for <code>packageJson.exports["."].default = filepath</code></li>
 <li>When using "exports" in <code>package.json</code>, it is generally a good idea to include <code>"./package.json": "./package.json"</code> so that it can be imported.</li>
 <li>"exports" can be advisable over "main" because it prevents external access to internal code (users are not depending on things they shouldn't). If you don't need that, "main" is simpler and may be a better option for you.</li>
+<li>CJS is the default; you have to opt-in to ESM mode. You can opt-in to ESM mode by renaming your script from <code>.js</code> to <code>.mjs</code>. Alternately, you can set <code>"type": "module"</code> in package.json, and then you can opt-out of ESM by renaming scripts from <code>.js</code> to <code>.cjs</code>.</li>
 </ol>
+<h3>Requiring ESM in Node.js</h3>
+<p>The capability to <code>require()</code> ESM modules in Node.js marks an incredible milestone. This feature allows packages to be published as ESM-only while still being consumable by CJS codebases with minimal modifications.</p>
+<p>Node 23 was released on Oct 2024 that you can now <code>require()</code> files that use ESM (import/export), which lets you import an ES Module in CommonJS and have it just work. Previously, if you wanted to use a “module” from your CommonJS file, you would need to do use dynamic import <code>await import('some/module/file.mjs')</code> and you can’t just put this at the top of your file.</p>
+<blockquote><p>Update: In the release of version 22.12.0, it is now no longer behind a flag on v22.x. Users can check <code>process.features.require_module</code> to see whether <code>require(esm)</code> is enabled in the current Node.js instance.</p>
+</blockquote>
+<pre><code class="lang-js">// Define a module in a file named 'math-utils.mjs'
+export function square(x) {
+  return x ** 2;
+}
+
+// main.js - ​Synchronously require the ES module in a CommonJS file
+const mathUtils = require('./math-utils.mjs');
+​
+console.log(mathUtils.square(2));
+</code></pre>
 <h2>Streams</h2>
 <p>Streams process data in chunks, significantly reducing memory usage. All streams in Node.js inherit from the <code>EventEmitter</code> class, allowing them to emit events at various stages of data processing. These streams can be readable, writable, or both.</p>
 <p><code>Readable</code> is the class that we use to sequentially read a source of data. Typical examples of Readable streams in Node.js API are <code>fs.ReadStream</code> when reading files, <code>http.IncomingMessage</code> when reading HTTP requests, and <code>process.stdin</code> when reading from the standard input.</p>
