--- a/kexizeroing.github.io/Notes on AI SDK.html
+++ b/kexizeroing.github.io/Notes on AI SDK.html
@@ -1,6 +1,7 @@
 <h2><a href="https://github.com/kexizeroing/kexizeroing.github.io/blob/master/src/blog/notes-on-ai-sdk.md">仓库源文</a>，<a href="https://kexizeroing.github.io/notes-on-ai-sdk">站点原文</a></h2>
 <p>This is my learning notes from the <a href="https://www.youtube.com/watch?v=kDlqpN1JyIw">AI Engineer workshop</a> tutorial by Nico Albanese.</p>
 <blockquote><p>AI SDK is like an ORM for LLMs. It provides a simple interface to interact with different LLM providers, making it easy to switch between them without changing your code.</p>
+<p>Here is an Gemini AI SDK Cheatsheet: <a href="https://patloeber.com/gemini-ai-sdk-cheatsheet">https://patloeber.com/gemini-ai-sdk-cheatsheet</a>. It has code snippets to start building with Gemini and the AI SDK.</p>
 </blockquote>
 <h2>Generate Text</h2>
 <p>Make your first LLM call.</p>
