--- a/kexizeroing.github.io/Notes on Model Context Protocol.html
+++ b/kexizeroing.github.io/Notes on Model Context Protocol.html
@@ -201,4 +201,5 @@ Until now, support for MCP was limited to Claude Desktop through local servers. 
 <li><a href="https://github.com/invariantlabs-ai/mcp-scan">https://github.com/invariantlabs-ai/mcp-scan</a></li>
 <li><a href="https://github.com/modelcontextprotocol/inspector">https://github.com/modelcontextprotocol/inspector</a></li>
 <li><a href="https://www.youtube.com/watch?v=eD0uBLr-eP8">https://www.youtube.com/watch?v=eD0uBLr-eP8</a></li>
+<li><a href="https://github.com/vercel-labs/mcp-for-next.js">https://github.com/vercel-labs/mcp-for-next.js</a></li>
 </ul>
