--- a/kexizeroing.github.io/Start a Javascript stack project.html
+++ b/kexizeroing.github.io/Start a Javascript stack project.html
@@ -207,7 +207,59 @@ module.exports = {
 </blockquote>
 <h3>Polyfills and Transpilers</h3>
 <p>When Babel compiles your code, what it's doing is taking your syntax and running it through various syntax transforms in order to get browser compatible syntax. What it's not doing is adding any new JavaScript primitives or any properties you may need to the browser's global namespace. One way you can think about it is that when you compile your code, you're transforming it. When you add a polyfill, you're adding new functionality to the browser. For example, Babel can transform <code>arrow functions</code> into regular functions, so, they can be compiled. However, there's nothing Babel can do to transform <code>Promises</code> or <code>Math.trunc</code> into native syntax that browsers understand, so they need to be polyfilled.</p>
-<p>With syntax transforms, I recommend <code>babel-preset-env</code>. For polyfills, the most popular one is <code>core-js</code>.</p>
+<p><strong>It's crucial to understand the difference between language syntax and runtime API:</strong></p>
+<ul>
+<li>If a browser or Babel doesn't understand a piece of syntax, you'll usually see a compile-time error, such as: <code>SyntaxError: Unexpected token 'async'</code>.</li>
+<li>Runtime APIs are part of the standard library and only available if the JavaScript engine (e.g., the browser) supports them. Babel does not polyfill runtime APIs. If a browser doesn’t support it, you’ll get a runtime error.</li>
+</ul>
+<table>
+<thead><tr>
+<th>Feature</th>
+<th>Type</th>
+<th>Babel Transforms?</th>
+<th>Error Type</th>
+<th>Fix if Unsupported</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td><code>async/await</code></td>
+<td>Syntax</td>
+<td>✅ Yes</td>
+<td>Compile-time</td>
+<td>Use <code>@babel/plugin-transform-async-to-generator</code> or <code>@babel/preset-env</code></td>
+</tr>
+<tr>
+<td>Arrow functions</td>
+<td>Syntax</td>
+<td>✅ Yes</td>
+<td>Compile-time</td>
+<td>Babel</td>
+</tr>
+<tr>
+<td><code>Array.prototype.includes</code></td>
+<td>Runtime API</td>
+<td>❌ No</td>
+<td>Runtime</td>
+<td>Polyfill via <code>core-js</code></td>
+</tr>
+<tr>
+<td><code>Promise</code></td>
+<td>Runtime API</td>
+<td>❌ No</td>
+<td>Runtime</td>
+<td>Polyfill via <code>core-js</code></td>
+</tr>
+<tr>
+<td><code>Object.assign</code></td>
+<td>Runtime API</td>
+<td>❌ No</td>
+<td>Runtime</td>
+<td>Polyfill or use lodash</td>
+</tr>
+</tbody>
+</table>
+<p>With syntax transforms, I recommend <code>@babel/preset-env</code>. For polyfills, the most popular one is <code>core-js</code>.</p>
 <p><code>core-js</code> provides support for the latest ECMAScript standard and proposals, from ancient ES5 features to bleeding edge features. It is one of the main reasons why developers can use modern ECMAScript features in their development process each day for many years, but most developers just don't know that they have this possibility because of <code>core-js</code> since they use <code>core-js</code> indirectly as it's provided by their transpilers or frameworks.</p>
 <p><code>core-js</code> is used by most of the popular websites. We can check it using <code>window['__core-js_shared__'].versions</code>, see details at <a href="https://github.com/zloirock/core-js/blob/master/docs/2023-02-14-so-whats-next.md">https://github.com/zloirock/core-js/blob/master/docs/2023-02-14-so-whats-next.md</a></p>
 <h3>The current state of ES5 on the web today</h3>
