--- a/sund.site/Steve Sun.html
+++ b/sund.site/Steve Sun.html
@@ -1,9 +1,5 @@
 <h2><a href="https://github.com/stevedsun/stevedsun.github.io/blob/master/content/_index.md">仓库源文</a>，<a href="https://sund.site/_index">站点原文</a></h2>
-<p>(｡･ω･)ﾉﾞ</p>
-<p>你好，我叫 Steve Sun，是一名在成都的软件架构师，喜爱书籍、电影，平时在这里分享软件开发的知识和日常见闻。目前关注 AI，边缘计算。</p>
-<hr/>
-<p>Hi, I'm <strong>Steve Sun</strong>, a software architect based in <strong>Chengdu, China</strong>.</p>
-<p>I used to be a Tech Lead at <a href="https://www.thoughtworks.com/">ThoughtWorks</a> and now an Architect in Industrial Edge Computing. On this site, I share my views and findings on Software Architecture design, reviews of best-selling books and movies.</p>
+<p>As a <strong>software developer</strong>, I'm passionate about understanding the <strong>underlying systems</strong> and <strong>principles of technology</strong>. I have a talent for deconstructing complex challenges into clear, <strong>structured models</strong>, and I find great joy in sharing my knowledge and experiences with the community.</p>
 <hr/>
 <h2>My Side Projects</h2>
 <ul>
