--- a/yuanj.top/2024 假期总结.html
+++ b/yuanj.top/2024 假期总结.html
@@ -1,4 +1,4 @@
-<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/posts/2024-holiday-summary.md">仓库源文</a>，<a href="https://yuanj.top/2024-holiday-summary">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/2024-holiday-summary.md">仓库源文</a>，<a href="https://yuanj.top/2024-holiday-summary">站点原文</a></h2>
 <p>现在在火车上，从敦煌往南走的这条路上网络信号一直不太好，总是会没网，所以通常我也会下点单机游戏或者电影之类的在路上打发时间，今天正好把这一篇一直想写的博客写了，不过依旧是，在构思的时候总会想到很多，但是手放在键盘上准备写的时候又似乎开始词穷。</p>
 &lt;!--more--&gt;
 
@@ -7,19 +7,19 @@
 <p>如同我的感叹一样，许多“大人”看到我之后都会惊叹一声“焦元都长这么高了，是不是大学快毕业了都？”，而对于年龄跟我差不多的或者比我没小几岁的那些总是说我一点都没变🤣</p>
 <p>而这次回来另一件对我来说意义比较大的见面的是回乡前一天与我的初恋见面了，在我回来之前她跟我说，一晃我们认识都九年了，第一次相遇的时候我才上初中一年级，那时候什么都不懂，但是心里却很清楚，我确实是真心喜欢她，而如今年龄大了似乎懂得多了，但是却逐渐也不知道真正的喜欢是什么样的了。跟初恋吃了顿饭，饭后也一起在河边散步，如同两个很久未见的老友一样我们聊了很多，聊对未来的打算，聊这些年都变化，聊身边的朋友…实际上我们俩上次见面还是我们高中二年级的时候，至今也已经近五年了，那个时候我还是个莽撞暴躁的少年，她也是个年少气盛的少女，没想到转眼间五年后再见会是这样的场景。见面之前她跟我说，见面后会不会尴尬？她要是说不出来怎么办？很显然她多虑了，我们从下午滔滔不绝的聊到晚上，简直像极了故友重逢。不过我想，以后应该也不会再与她有什么交集了，我对她的喜欢还是保留在多年前的少年心中，我不想看到多年后她变成一副我不认识的模样，让我陌生。</p>
 <p>在乡下兜兜转转去了很多以前常去玩的地方，很多地方已经变了模样，似乎只有黄昏一直是这般。</p>
-<p><img alt="" src="/images/20240819211516.jpg"/></p>
-<p><img alt="" src="/images/20240819211502.jpg"/></p>
+<p><img alt="" src="/i/20240819211516.jpg"/></p>
+<p><img alt="" src="/i/20240819211502.jpg"/></p>
 <h2>父亲母亲</h2>
 <p>自从上大学以后，每一次回家都能感受到父母老了一点，而每一次回去我也希望能够多陪他们一点，多跟他们说点话。</p>
 <p>在家里老相册中翻到父母二十多年前的照片，那个时候甚至还没有我，比我大九岁的哥哥也还会被父亲抱在怀里，看着这张照片我有点想哭，那个时候的他们多年轻啊，跟我现在一样，可时间毫不留情地在他们的轮廓上留下了一笔又一笔的划痕。</p>
-<p><img alt="" src="/images/20240819211533.jpg"/></p>
+<p><img alt="" src="/i/20240819211533.jpg"/></p>
 <p>我的父亲耳朵不好，所以沉默寡言，而我母亲的话稍微多一点，他们没有懂多少很高深的知识，只知道一些口耳间相传的一些老话，自我上大学后每隔几天打电话回家总是不厌其烦地问着那几个我回答过无数次的问题，下午吃的什么？今天你那边天气怎么样？现在天黑了吗？今天上的什么课？ ... 越伟大的爱越是无言，他们的浓浓情意我心里都很清楚，所以也无数次地回答着这些问题。在家的时候母亲很多次说过，要是不行我就回敦煌跟着我哥哥去干导游算了，把自己养活住，然后早点结婚生子，安安稳稳地活着就行了，可我还是想拼一次，母亲也就不再多言，像往常无数次一样给予我最大的支持，而他们也始终是我心里最重要的人。我有几个上大专的朋友如今已经在家乡安顿下来，有的甚至已经买了车，虽然是二手车，但是可以载着父母外面旅游一圈了，说不羡慕是假的，但是我选择了另一条路，就要努力先走下去。侄儿也总会跟我说，要我好好考研，考不上就回敦煌，这样他和爷爷奶奶就能经常见到我了，听到这话，还是有点心酸的。</p>
 <h2>在错误中学习</h2>
 <p>这是在生信爱好者周刊上看到的一句话，感觉很有道理，想想我以前，似乎学得最好的东西往往就是从许多试错中摸索出来的，所以也更加清楚问题所在。</p>
-<p><img alt="" src="/images/20240819212075.jpg"/></p>
+<p><img alt="" src="/i/20240819212075.jpg"/></p>
 <h2>为生活做减法</h2>
 <p>时代的发展越来越快，我们所需要关注的东西也越来越多，在自己的手机里会有越来越多的 APP 来告诉你哪个领域发生了什么事，相信很多人都会有这样的感受，拿到手机之后收到的通知与资讯太多，使之有时无法对那些自己真正需要关注的给予时间，不仅是在信息获取上是如此，生活中更是如此，在我开始准备考研之后就发现，当我很累的时候，拿起手机想要放松一下，但是刷到很多低质量的信息和文章，而一个个去除掉又很麻烦，所以我开始倾向于一种更贱简单的生活，或许这就是所谓的“极简主义”。之前在 reddit 上有为国外网友发帖询问，如何才能开始极简生活？我的回答很简单，那便是留下自己真正关注和需要的东西，对于不再需要的事物或许将其摒弃掉会使自己变的更加“纯粹”。自高中开始我便有意控制手机 APP 的数量和生活用品的数量，对于那些很久不用的东西，要么将其打入冷宫，要么直接丢弃，尽量避免“万一哪天要用到了呢？”这样的思想。</p>
-<p><img alt="" src="/images/20240819212047.jpg"/></p>
+<p><img alt="" src="/i/20240819212047.jpg"/></p>
 <p>由于我始终秉持这样的思想，我对自己身边的很多事物开始进行“精简”。比如我的写作工作流，以前或许会用个好用的笔记软件加上云盘之类的同步备份，而如今，借助 markdown 我几乎可以用任何文本编辑器无障碍写作，同时借助 git push 到云端，那么便可以随时随地用浏览器访问到了；再者就是对生活的精简，我会定时清理自己柜子和抽屉里的东西，经常要用的东西放在手边喝柜子上，其余的很少用的全部装进盒子放入柜子，并且打包的时候进行分类，如电子产品放一个盒子，生活用品如卫生纸、口罩等放一个盒子等等，长久以往，我对自己的物品位于何处是非常的清楚，也没有多少无用杂物来叨扰我的生活，感觉效率更高了一点；对于我的手机 APP，很少用的能用小程序代替那就用小程序，刚需的软件就老老实实用 APP，信息获取方式一律使用 RSS，这样也有效降低了我对手机的依赖，平时对手机似乎就没有那么多的欲望；而电脑也早就换成了 Arch Linux，系统的一切皆是我所需，我也感受到，似乎用 Linux 反而少了很多折腾，我不用去纠结怎么搞掉微软强行喂给用户的 shi，也不用去纠结哪个软件最好用，因为工作流是固定的，我只写一些脚本代码如 R、shell、Python、C/C++，不写什么大型项目，所以 VScode 完全足够，而且很多操作可以用 Terminal 完成，再加上平时用浏览器和 telegram 都有 Linux 版本，似乎也再没有什么特别需要纠结和考虑的了，后续或许会更加依赖于 Terminal 的工作流，体验可谓是更加“纯粹”，效率也是比 Windows 下高了不少，也很符合我事多的毛病（题外话，真心没觉得 Arch 下问题多，勤滚就是）。</p>
 <h2>主动获取信息</h2>
 <p>关于这个主题其实我之前已经从各方面说过很多次了。信息化时代，我们越来越“被迫”接受一些信息，各类的软件页几乎都是算法推荐，时间越长我是越来越受不了这样的信息获取方式，我希望能够主动去获取自己想要的信息，于是我越来越钟爱 RSS，我不再关注那些所谓的资讯和新闻，我只订阅了一些我喜欢的博主的个人 blog，现在提供 RSS 订阅最多的可能就是个人的 blog 了，包括我自己的 blog 也是有 RSS 的，这就让获取信息的方式留下了最后一丝“净土”，想要什么信息就去找相应的 RSS 源，RSS 已经开始逐渐被主流媒体抛弃，可能这也是 RSS 还能保持纯净的原因之一？</p>
