--- a/yuanj.top/Arch 安装记录.html
+++ b/yuanj.top/Arch 安装记录.html
@@ -1,8 +1,8 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/Arch安装记录.md">仓库源文</a>，<a href="https://yuanj.top/posts/n2f9s6o0">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/arch-installation-notes.md">仓库源文</a>，<a href="https://yuanj.top/arch-installation-notes">站点原文</a></h2>
 <p>最近微信出新版的原生 Linux 客户端了，加上为了 aur 和 wiki，装上了 ArchLinux。</p>
 &lt;!--more--&gt;
 
-<p><img alt="" src="/images/202403201841486.png"/></p>
+<p><img alt="" src="/i/20240320184148.jpg"/></p>
 <p>启动盘用的是 Ventoy，由于安装介质中的控制台不能用校园网（或者说是我不会），使用 USB 共享网络。下面便是安装与配置的步骤。</p>
 <h2>禁用 reflector 服务</h2>
 <p>2020 年，archlinux 安装镜像中加入了 reflector 服务，它会自己更新 mirrorlist。在特定情况下，它会误删某些有用的源信息。这里进入安装环境后的第一件事就是将其禁用。也许它是一个好用的工具，但是很明显，因为地理上造成的特殊网络环境，这项服务并不适合加入到守护进程中。使用下列命令禁用：</p>
@@ -11,7 +11,7 @@
 <h2>确认启动模式</h2>
 <pre><code class="lang-bash">ls /sys/firmware/efi/efivars
 </code></pre>
-<p><img alt="" src="/images/202403201843195.png"/></p>
+<p><img alt="" src="/i/20240320184319.jpg"/></p>
 <p>输出了一堆东西（efi 变量），则说明已在 UEFI 模式。</p>
 <h2>网络连接</h2>
 <p>使用 iwctl 连接无线网：</p>
@@ -107,7 +107,7 @@ pacman -S amd-ucode # AMD
 <pre><code class="lang-bash">vim /etc/default/grub
 </code></pre>
 <p>去掉 GRUB_CMDLINE_LINUX_DEFAULT 一行中最后的 quiet 参数，把 loglevel 的数值从 3 改成 5，这样是为了后续如果出现系统错误，方便排错。再加入 nowatchdog 参数，这可以显著提高开关机速度。</p>
-<p><img alt="" src="/images/202403201858693.png"/></p>
+<p><img alt="" src="/i/20240320185869.jpg"/></p>
 <p>如果要引导 Windows，还需要添加新的一行 GRUB_DISABLE_OS_PROBER=false。</p>
 <pre><code class="lang-bash"># GRUB boot loader configuration
 
@@ -167,7 +167,7 @@ passwd myusername
 <pre><code class="lang-bash">EDITOR=vim visudo
 </code></pre>
 <p>去掉<code>#%wheel ALL=(ALL:ALL) ALL</code>的注释</p>
-<p><img alt="" src="/images/202403201907539.png"/></p>
+<p><img alt="" src="/i/20240320190753.jpg"/></p>
 <p>切换到新用户：</p>
 <pre><code class="lang-bash">su - myusername
 </code></pre>
