--- a/yuanj.top/Gromacs 分子动力学模拟.html
+++ b/yuanj.top/Gromacs 分子动力学模拟.html
@@ -1,8 +1,8 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/gromacs分子动力学模拟.md">仓库源文</a>，<a href="https://yuanj.top/posts/v5p7o4y0">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/gromacs-molecular-dynamics-simulation.md">仓库源文</a>，<a href="https://yuanj.top/gromacs-molecular-dynamics-simulation">站点原文</a></h2>
 <p>近期做了一次分子动力学模拟实验，命令比较多，整理一下步骤，参考了生信实战的教程，但他们的教程存在很多问题，这里完善一下。</p>
-<p>以江苏大学一位师兄提供的蛋白文件为基础，前提是要去除小分子，否则 gromacs 会报错提示有非标准残基。</p>
 &lt;!--more--&gt;
 
+<p>以江苏大学一位师兄提供的蛋白文件为基础，前提是要去除小分子，否则 gromacs 会报错提示有非标准残基。</p>
 <h2>环境准备</h2>
 <p>使用 conda 来安装软件：</p>
 <pre><code class="lang-bash">conda create -n gmx python=3.9 #创建虚拟环境
@@ -65,7 +65,7 @@ pip install DuIvyTools
 <p>使用下列命令查看</p>
 <pre><code class="lang-bash">dit xvg_show -f potential.xvg
 </code></pre>
-<p><img alt="" src="/images/202311151946742.png"/></p>
+<p><img alt="" src="/i/20231115194674.jpg"/></p>
 <h2>NVT 温度平衡</h2>
 <p>执行：</p>
 <pre><code class="lang-bash">gmx grompp -f nvt.mdp -c em.gro -r em.gro -p topol.top -o nvt.tpr
@@ -80,7 +80,7 @@ pip install DuIvyTools
 <p>查看温度平衡情况：</p>
 <pre><code class="lang-bash">dit xvg_show -f temperature.xvg
 </code></pre>
-<p><img alt="" src="/images/202311151946187.png"/></p>
+<p><img alt="" src="/i/20231115194618.jpg"/></p>
 <h2>NPT 压力平衡</h2>
 <p>执行：</p>
 <pre><code class="lang-bash">gmx grompp -f npt.mdp -c nvt.gro -r nvt.gro -t nvt.cpt -p topol.top -o npt.tpr
@@ -94,7 +94,7 @@ nohup gmx mdrun -deffnm npt &amp;
 <p>查看压力分析结果：</p>
 <pre><code class="lang-bash">dit xvg_show -f pressure.xvg
 </code></pre>
-<p><img alt="" src="/images/202311151947851.png"/></p>
+<p><img alt="" src="/i/20231115194785.jpg"/></p>
 <p>密度分析：</p>
 <pre><code class="lang-bash">gmx energy -f npt.edr -o density.xvg
 </code></pre>
@@ -102,7 +102,7 @@ nohup gmx mdrun -deffnm npt &amp;
 <p>查看压力分析结果：</p>
 <pre><code class="lang-bash">dit xvg_show -f pressure.xvg
 </code></pre>
-<p><img alt="" src="/images/202311151947188.png"/></p>
+<p><img alt="" src="/i/20231115194718.jpg"/></p>
 <h2>正式的动力学模拟</h2>
 <p>执行 grompp 生成模拟的 tpr 文件：</p>
 <pre><code class="lang-bash">gmx grompp -f md.mdp -c npt.gro -t npt.cpt -p topol.top -o md_0_1.tpr
@@ -122,7 +122,7 @@ nohup gmx mdrun -deffnm npt &amp;
 <p>查看 RMSD 结果：</p>
 <pre><code class="lang-bash">dit xvg_show -f rmsd.xvg
 </code></pre>
-<p><img alt="" src="/images/202311151947005.png"/></p>
+<p><img alt="" src="/i/20231115194700.jpg"/></p>
 <p>计算相对于模拟之前晶体的结构差异，可以使用下面的命令：</p>
 <pre><code class="lang-bash">gmx rms -s em.tpr -f md_0_1_noPBC.xtc -o rmsd_xtal.xvg -tu ns
 </code></pre>
@@ -134,5 +134,5 @@ nohup gmx mdrun -deffnm npt &amp;
 <p>查看结果：</p>
 <pre><code class="lang-bash">dit xvg_show -f gyrate.xvg
 </code></pre>
-<p><img alt="" src="/images/202311151957493.png"/></p>
+<p><img alt="" src="/i/20231115195749.jpg"/></p>
 <p>这一套流程都是按照默认参数和步骤来的，实际上我也不太懂，但是大多数情况下使用默认参数是足以满足实验需求。</p>
