--- a/yuanj.top/README.html
+++ b/yuanj.top/README.html
@@ -1,24 +1,52 @@
 <h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/readme.md">仓库源文</a>，<a href="https://yuanj.top/readme">站点原文</a></h2>
-<blockquote><p>"Who stands at the peak of immortality? One glimpse of the eternal void, and all paths dissolve."</p>
-<p>A passionate Linux enthusiast, a self-taught developer in the making, and a quintessential STEM guy with a love for history and literature.</p>
+<blockquote><p>忠实的 Linux 爱好者、终身学习者、极简主义者，深受 Unix 哲学影响，立志成为科学家</p>
 </blockquote>
-<h3>About Me</h3>
+<h3>关于我</h3>
 <ul>
-<li>2021-2025 | Bachelor of Environmental Science and Engineering, Chengdu University of Technology</li>
-<li>2025-2028 | Master of Bioinformatics, Sichuan University</li>
+<li>2021-2025 | 成都理工大学-环境科学与工程学士</li>
+<li>2025-2028 | 四川大学-生物信息学硕士</li>
 <li>GitHub: <a href="https://github.com/imjiaoyuan">imjiaoyuan</a></li>
 <li>Email: <code>imjiaoyuan@gmail.com</code></li>
+<li>Subscribe：<code>https://jiaoyuan.org/index.xml</code></li>
 </ul>
-<h3>Technical Skills</h3>
+<h3>研究方向</h3>
 <ul>
-<li>Proficient in data analysis and visualization using Python, R, and JavaScript</li>
-<li>Linux enthusiast &amp; AI developer in training</li>
+<li>基因组学大模型</li>
+<li>林木进化基因组学</li>
 </ul>
-<h3>Research Interests</h3>
+<h3>我的订阅</h3>
 <ul>
-<li>Bioinformatics with focus on multi-omics integration</li>
-<li>AI applications in computational biology</li>
-<li>Scientific software development</li>
+<li><a href="https://wangyurui.com">太隐</a>：一名终生学习者，写的文章非常有深度</li>
+<li><a href="https://pseudoyu.com/">Pseudoyu</a>：区块链开发工程师，香港大学计算机系硕士</li>
+<li><a href="https://blog.ursb.me/">Airing 的博客</a>：中山大学哲学硕士，原腾讯音乐高级前端工程师</li>
+<li><a href="https://www.ntiy.com/">非理勿试</a>：Soulizer 运营的个人博客，专注于记录、分享和学习，倡导理性思考和原创内容</li>
+<li><a href="https://1q43.blog/">虹线</a>：公众号“赤潮 AKASHIO”，播客“二维吾码”主理人，面向己写作</li>
+<li><a href="https://tw93.fun/">Tw93</a>：来自杭州的工程师，主职前端，《潮流周刊》作者</li>
+<li><a href="https://diygod.cc/">DIYgod</a>：follow、RSSHub、xblog 作者，现居新加坡</li>
+<li><a href="https://yufree.cn/">于淼</a>：美国杰克逊实验室环境科学家</li>
+<li><a href="https://lutaonan.com/">Randy's Blog</a>：原广州大学华软软件学院本科生，曾就职于多个大厂的程序员</li>
+<li><a href="https://www.owenyoung.com/">Owen 的博客</a>：追求注意力自由、热爱闲暇时间并注重朴素生活哲学的独立博客作者</li>
+<li><a href="https://hutusi.com/">胡涂说</a>：现居上海的终身学习者，热爱读书、音乐、电影和编程</li>
+<li><a href="https://www.ruanyifeng.com/">阮一峰的网络日志</a>：《科技爱好者周刊》作者，经济学博士，CN 博客奠基人</li>
+<li><a href="https://limboy.me/">Limboy</a>：专注于 Mac 和 Web 开发，喜欢尝试新事物，热衷创作</li>
+<li><a href="https://blog.codingnow.com/">云风的 BLOG</a>：毕业于中南大学，原网易游戏核心成员、杭州研究中心总监</li>
+<li><a href="https://zishu.is-cool.dev">子書承宇</a>：DIY 硬件、折腾「树莓派、电脑系统、脚本、靶场、软路由」、音游</li>
+<li><a href="https://mabbs.github.io/">Mayx 的博客</a>：爱好编程与 ACGN，擅长编写 Python、JS、Bash 等脚本</li>
+<li><a href="https://idealclover.top">idealclover</a>：南大毕业的软件工程师，博客内容很丰富</li>
 </ul>
-<h3>My Footprints</h3>
-&lt;iframe src="https://www.google.com/maps/d/embed?mid=1_50sSeqq3-VQszq46yrfVswE29RYavQ&amp;ehbc=2E312F" width="100%" height="480"&gt;&lt;/iframe&gt;
+&lt;script src="https://giscus.app/client.js"
+        data-repo="imjiaoyuan/imjiaoyuan.github.io"
+        data-repo-id="R_kgDONrKDQg"
+        data-category="Announcements"
+        data-category-id="DIC_kwDONrKDQs4CmDl9"
+        data-mapping="specific"
+        data-term="README"
+        data-strict="0"
+        data-reactions-enabled="0"
+        data-emit-metadata="0"
+        data-input-position="bottom"
+        data-theme="light"
+        data-lang="en"
+        crossorigin="anonymous"
+        async&gt;
+&lt;/script&gt;
