--- a/yuanj.top/Xfce 的一系列问题.html
+++ b/yuanj.top/Xfce 的一系列问题.html
@@ -1,4 +1,4 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/xfce的一系列问题.md">仓库源文</a>，<a href="https://yuanj.top/posts/d7t2m8d8">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/questions-of-xfce.md">仓库源文</a>，<a href="https://yuanj.top/questions-of-xfce">站点原文</a></h2>
 <p>昨天看到余教授在用 xfce4，于是乎，也装来玩玩，整体上还可以，主要有一些细小的问题需要搞一下。</p>
 &lt;!--more--&gt;
 
@@ -24,6 +24,6 @@ echo '__include: rime_ice_suggestion:/' &gt;&gt;
 <pre><code class="lang-bash">yay -S xfce4-pulseaudio-plugin
 </code></pre>
 <p>VScode+httpgd 出图还是很丝滑。</p>
-<p><img alt="" src="/images/202406190958475.png"/></p>
+<p><img alt="" src="/i/20240619095847.jpg"/></p>
 <p>整体感觉还算可以。</p>
-<p><img alt="" src="/images/202406190958655.png"/></p>
+<p><img alt="" src="/i/20240619095865.jpg"/></p>
