--- a/yuanj.top/十月失眠.html
+++ b/yuanj.top/十月失眠.html
@@ -1,11 +1,11 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/十月失眠.md">仓库源文</a>，<a href="https://yuanj.top/posts/i0saj23bds8">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/insomnia-in-october.md">仓库源文</a>，<a href="https://yuanj.top/insomnia-in-october">站点原文</a></h2>
 <p>今天从早上起来开始，眼睛就一直很痛，我猜测可能是前一天晚上没有睡好，最近老是失眠，于是上完课，做完黄老师让我讲解的黑麦草 HIPP 基因家族鉴定的 PPT 之后，就立马躺下睡觉了，但是一直睡不着 ...</p>
 &lt;!--more--&gt;
 
 <p>翻来覆去就是睡不着，最近的事情可能有点多，有一些焦虑吧，我总是喜欢把事情都做完再休息，但很多事情无法一天做完，详细自己是有点急功近利了。</p>
 <p>睡觉的时候听了一下 AppleMusic 的雨声电台，还是很不错的。</p>
-<p>&lt;img src="/images/202310201907820.jpg" width=250px/&gt;</p>
+<p>&lt;img src="/i/20231020190782.jpg" width=250px/&gt;</p>
 <p>躺了一会之后就起来，发现今天的太阳还不错，于是拿了瑜伽垫到天台上躺着晒了一会太阳，很舒服~</p>
-<p><img alt="" src="/images/202310201909863.jpg"/></p>
+<p><img alt="" src="/i/20231020190986.jpg"/></p>
 <p>宜宾总是阴雨天，经常见不着太阳，尤其是冬天，很多时候是晒不到太阳的，如果明天还是晴天，就把衣服拿出去晾了，沾沾“朝气”。</p>
 <p>明天有一整天的时间了，打算拿一天所有时间（可以说是“闭关”哈哈）来解决 gromacs 补充非标准残基和力场的问题，如果解决了的话，和江苏大学那边可能会有一些小合作。</p>
