--- a/yuanj.top/当我换上了 Debian12 Linux.html
+++ b/yuanj.top/当我换上了 Debian12 Linux.html
@@ -1,9 +1,9 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/当我换上了Debian12Linux.md">仓库源文</a>，<a href="https://yuanj.top/posts/a5q9j1e7">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/switch-to-debian.md">仓库源文</a>，<a href="https://yuanj.top/switch-to-debian">站点原文</a></h2>
 <p>历经千辛万苦，最终还是换上了 Debian ...</p>
 &lt;!--more--&gt;
 
 <p>先来张桌面图</p>
-<p><img alt="" src="/images/202401021323392.png"/></p>
+<p><img alt="" src="/i/20240102132339.jpg"/></p>
 <p>安装的软件有：</p>
 <ul>
 <li>Linux QQ，不得不说，腾讯这一个做的还是很不错的，和 Windows 下的新版 QQ 基本上一样了</li>
@@ -52,14 +52,14 @@ WantedBy=default.target
 <pre><code class="lang-bash">sudo systemctl enable clash.service
 </code></pre>
 <p>至于系统信息，直接看下图</p>
-<p><img alt="" src="/images/202401021340831.png"/></p>
+<p><img alt="" src="/i/20240102134083.jpg"/></p>
 <p>不过有一说一，Debian 确实稳定，但是使用起来体验还是真的不如 POP_OS 这种经过优化的，后面考虑换到 POP_OS，Ubuntu 现在夹杂了太多私货，实在不敢恭维了 ...</p>
 <p>Linux 用起来实际上跟 Windows 差别以已经不时很大了，主要是使用习惯的问题，比如 fcitx5 切换输入法是快捷键 Ctrl+空格，而 Windows 是 Ctrl+Shift，还有文件系统也不一样，Linux 里一切皆文件，不管什么，改改配置文件就好，Linux 差的最大的就是软件生态了，不过目前看 ... 似乎暂时够用了，如果需要 Windows, 我还有一台笔记本～</p>
 <hr/>
 <p><strong>2024/01/04 更新</strong></p>
 <p>昨天换蓝牙驱动的时候不小心把 GNOME 桌面删掉了 ... 于是切换到 cinnamon 桌面环境，用上官方的 non-free 源，蓝牙驱动居然就好了！？我的台式电脑是外置 USB 插入的蓝牙设备，之前 ubuntu 上面就会经常卡顿，断断续续的，昨天用官方的源全面更新了一下之后居然很完美！！！没有丝毫问题，之前在 windows 的时候都会偶尔卡顿～</p>
 <p>更爱 debian 了！cinnamon 桌面唯独有问题的就是 wine 应用图标不显示和登录页面比较丑，但是这俩似乎不是很大的问题？还是可以调教的。字体换上了 ubuntu 的字体，很好看，终端字体是 windows 的 Consolas，很不错。</p>
-<p><img alt="" src="/images/20240104105911.png"/></p>
+<p><img alt="" src="/i/20240104105911.jpg"/></p>
 <p>下面的软件是 GNOME 环境下可以卸掉的没用的软件：</p>
 <pre><code class="lang-bash">sudo apt purge transmission* goldendict pidgin kasumi hexchat* simple-scan gnome-games brasero* imagemagick* gnote gnome-font-viewer debian-reference* firefox* libreoffice* cheese* gnome-sound-recorder gnome-logs gnome-calculator gnome-characters gnome-online-accounts gnome-screenshot gnome-user-docs gnome-user-share xiterm+thai mozc* remmina shotwell galculator gimp-help*
 </code></pre>
@@ -67,7 +67,7 @@ WantedBy=default.target
 <p>还有就是这输入法 ... fcitx5 中文输入法能够输入的标点符号少了很多，还需要再调教一下。</p>
 <hr/>
 <p><strong>2024/01/06 更新</strong></p>
-<p>登陆界面可以使用 lightdm 的 lightdm-settings 来修改，直接使用 apt 安装，然后把背景图片放在<code>/usr/share/images/</code>下，打开程序菜单里的<code>Login Window</code>来进行修改，主题也在这里修改。</p>
+<p>登陆界面可以使用 lightdm 的 lightdm-settings 来修改，直接使用 apt 安装，然后把背景图片放在<code>/usr/share/i/</code>下，打开程序菜单里的<code>Login Window</code>来进行修改，主题也在这里修改。</p>
 <p><strong>2024/02/03 更新</strong></p>
 <p>笔记本上用 LMDE 更友好一些~</p>
 <p>卸载无用软件：</p>
