--- a/yuanj.top/我的 2023 年.html
+++ b/yuanj.top/我的 2023 年.html
@@ -1,4 +1,4 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/我的2023年.md">仓库源文</a>，<a href="https://yuanj.top/posts/d2r2z5g1">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/my-2023.md">仓库源文</a>，<a href="https://yuanj.top/my-2023">站点原文</a></h2>
 <p>对于我 2023 年的回顾、总结与展望。</p>
 &lt;!--more--&gt;
 
@@ -6,25 +6,25 @@
 <p>2023 年初的时候我还在家，因为疫情原因，所以 12 月份就回家了，也是在 12 月份，我进入了黄进老师的课题组，起初并没有做什么事，只是每日照常汇报之类的，而我在宜宾校区，所以也无法参与湿实验。</p>
 <p>后来就参加了生命科学竞赛，也是在参加生命科学竞赛的时候，我开始做生物信息学分析，一直到现在。</p>
 <p>刚开始做就是按照师兄给的教程照着做一些简单的分析，比如系统发育分析、热图等，后来由于做的比较好，老师让师兄师姐给了我更多的分析去做，我的水平也在一步步提升。最开始用 TBtools 绘图，现在已经有很多分析都是使用 R 语言或者其他软件来绘图了。</p>
-<p><img alt="" src="/images/202312312121010.png"/></p>
+<p><img alt="" src="/i/20231231212101.jpg"/></p>
 <p>我之所以能够进步快实际上与我的计算机基础是离不开的，想来大学两年多，其他的不说，电脑算是玩的明白，黄老师也经常会和我讨论一些计算机相关的东西，比如发现 <a href="https://github.com/binary-husky/gpt_academic">gpt_academic</a> 这个项目之后我就推荐给黄老师，然后黄老师出资让我搭建了课题组内部使用的镜像站。当时课题组内是轮转制度，每两周我会跟随不同的研究生学习，学到了很多东西，也参与了一些文章之类的，写作和论文阅读水平也提高了很多。</p>
 <p>后来由于杜志烨师兄毕业了要考研，就离开了课题组，于是组里的生信基本都由我来负责了，我也一直在学习相关的东西，而课题组里也会有各种各样的分析需要我做，不过我也很乐意，做的多了会的也就多了，何乐而不为呢？黄老师和师兄师姐教会我很多东西，所以我有时间去成都就会跟他们吃吃饭什么的。</p>
 <p>今年上半年除了生命科学竞赛之外，我还参加了三创赛、市场调查分析大赛，获得了也算不错的奖项，队友们也都很好。</p>
 <p>暑假的时候我还是和往常一样四处打工“求生”，去过工地做工，当过酒店服务员，也摆过摊，挣了一些小钱，给我母亲买了一部新手机，剩下的跟朋友去西安玩了几天，也算不错。</p>
-<p><img alt="" src="/images/202312312124836.jpg"/></p>
+<p><img alt="" src="/i/20231231212483.jpg"/></p>
 <p>这期间，黄老师让我搭建了课题组官网，但是黄老师太忙，现在还有很多内容没有完成。为了便于运营和维护，课题组官网也采用了 hugo 框架，写写 markdown，git 推送就能完成更新，不需要费多大劲去管理。同时我也在教师兄师姐做生信分析，只是他们比较忙，学到的并不多。</p>
-<p>哦对了，暑假的时候我也在 GitHub 上发布了一个自动化 hmmer 的项目 <a href="https://github.com/catuncle4/auto-hmmer">auto-hmmer</a>，其实是很简单的，仅仅是方便了操作而已，也有一些朋友在用，也是没有荒废吧。</p>
+<p>哦对了，暑假的时候我也在 GitHub 上发布了一个自动化 hmmer 的项目 <a href="https://github.com/imjiaoyuan/auto-hmmer">auto-hmmer</a>，其实是很简单的，仅仅是方便了操作而已，也有一些朋友在用，也是没有荒废吧。</p>
 <p>到了这学期，对于基础的生信绘图我已经非常熟练了，还有一些写的教程被 TBtools 的作者陈老师收录了。​想起黄老师之前叫我学习的转录组数据分析，也就是 RNA-seq，我利用国庆假期的时间完成了学习，在学校的超算上面做的，也算顺利，Linux 方面的知识有些不足，又学习了一下 Linux。后来组里开发新项目需要使用转录组数据来筛选基因，我就又派上用场了。</p>
 <p>上学期我学习生信的时候，黄老师说让我把一些简单的分析做个教程，于是就有了这个博客，起初用的是 hexo 框架，后来换成了 hugo，我也买了域名，刚开始用的是 hieroglyphs.top，后来换成了 yuanj.top，这个更简短些，当时为了更好地管理博客，也学习了 git 和 GitHub。为了便于其他人学习，我也在哔哩哔哩上面发了一些视频，有一位江南大学的师兄看了我的视频之后找到我，想让我帮忙去做 gromacs 分子动力学模拟，于是我就学习了一下，也能够顺利完成了，现在也还在研究这个，如果掌握好了的话，也是一项不错的技能。</p>
-<p><img alt="" src="/images/202312312131224.png"/></p>
+<p><img alt="" src="/i/20231231213122.jpg"/></p>
 <p>在这学期也开始想考研的事了，给一些老师发了 email 联系，农科院基因组所的黄三文老师让他的一个博士生来与我交流，我做了一下简单的 presentasion，完了之后这位师兄说了一些我的问题，比如说生信分析更多要用 R 语言来分析；我的英语水平较低等等，我也在尽力的去提升，目前课题组黑麦草项目的很大一部分生信分析与转录组分析都是用 R 语言完成的。今年也再次参加了生命科学竞赛，不同的是，上学期我是中途参加，排名是第四位，而今年我是队长，生信分析、转录组分析、基因筛选、实验设计等都是我完成的，算是我主导的项目吧，在写这篇文章的前一会才把综述和实验设计改好上传到生命科学竞赛的系统上。</p>
 <p>感觉今年是很忙碌的，总有一堆事情要做，但是总的来说也是比较充实的，当有闲暇时间的时候我也会去外面玩玩，上个月还去成都跟朋友玩了几天，也跟黄老师和师兄师姐们吃了顿饭，还和姜南师兄、石杨师兄喝了几杯，石杨师兄可能是喝多了，跟我说了好多话，哈哈哈。</p>
 <p>这学期我组装了一台台式电脑，做分析更快了，还可以做更多分析了~ 同时也发现了新大陆 ... 无畏契约挺好玩。</p>
-<p><img alt="" src="/images/202312312132266.jpg"/></p>
+<p><img alt="" src="/i/20231231213226.jpg"/></p>
 <p>之前由于在家的时候娘亲给我吃的太好，加上运动的不多，于是胖了好多，上楼梯也要喘气了，打球也跑不动了，所以又开始了减肥，节食+运动，坚持了挺久，又瘦到跟之前一样的体重了，还是功夫不负有心人。又去烫了个头发，似乎 ... 变帅了！</p>
 <p>前不久也确立了考研跨考川大生物信息学的目标，于是又在学习 C 语言、生信原理、生物学知识、英语等等，不断地学习 ... 之前去成都还去川大望江校区看了一下。</p>
-<p><img alt="" src="/images/202312312133957.jpg"/></p>
+<p><img alt="" src="/i/20231231213395.jpg"/></p>
 <p>最近这一周除了比赛的事，我也尝试在台式机上装 Linux，装过 Debian、manjaro、Ubuntu、popos 等等很多发行版，但是 ... 总有问题使我不得不放弃，比如 Wayland 与英伟达显卡的冲突、比如 GNOME 对 LinuxQQ 兼容性问题、比如非常难用的微信、比如让人非常“难受”的中文环境和中文输入法、比如仍然不完善的软件生态 ... 最初是因为转录组分析和 geomacs 都需要在 Linux 下使用，而超算只能网页内 ssh，还要找老师申请配额，体验很不好所以想着换上 Linux，但是被迫换回来，现在依旧是使用 Windows10 LTSC 2021 + WSL2。</p>
-<p><img alt="" src="/images/202312312141605.png"/></p>
+<p><img alt="" src="/i/20231231214160.jpg"/></p>
 <p>2023 年应该是我提升和改变很大的一年，学到了生信分析、R 语言、Linux、git、Python、科研绘图、gromacs 等等，写作水平、阅读水平、英语水平、计算机水平等等也有了较大地提升，博客和公众号也一直在运营，似乎一些都在向好的方向发展？这一年，我也要感谢很多人，感谢黄老师（我一直将黄老师视作我的贵人，哈哈哈）、感谢师兄师姐、感谢与我共同参赛的队友 ...</p>
 <p>希望明年会更好！</p>
