--- a/yuanj.top/月刊 vol.1：结束与开始.html
+++ b/yuanj.top/月刊 vol.1：结束与开始.html
@@ -5,7 +5,7 @@
 <p>其实这段时间以来总想写点什么，但是似乎都是些琐碎的事，难以构成一篇足够长度的文章去阐述，直到昨天看到了 Airing 的 <a href="https://blog.ursb.me/posts/weekly-29/">月刊</a>，突然觉着，写成月刊应该会不错，也有较多的时间去积攒内容素材，此篇便是第一期。</p>
 <h2>近况</h2>
 <p>这段时间内，对于我来说，发生最大的事无非就是从科伦离职，并且考研上岸了。起初，当我打算离职的时候，复试结果还没有出，当时也没去想考上了就不用急着工作了之类的问题，反而，我觉得在科伦可以学到很多东西，熊博带我做了许多大模型相关的工作，让我对这一块受益匪浅。但是我还是决定离职了，首先是心理上的原因，项目越来越大，bug 越来越多，让我经常很疲惫，作为一个半吊子的开发，压力确实很大。另一层原因是学业上的，目前大四了，最主要的事还是毕业论文，学校那边导师跟我讲了好几次，让我老老实实待在学校里先把毕业论文好好写完，如果毕业都成问题，我做再多的事还有何意义？而我也不能老是请假去开组会，复试就已经连续请两星期了。基于这两个原因，我下定决心离职了，距离合同上实习到 6 月份还是有很长一段时间，我第一时间先与熊博沟通，熊博还是很理解我，并没有多说什么，只是说日后多多合作。跟熊博说了之后，我就发起了 OA，周一便返回公司办了手续。</p>
-<p><img alt="" src="/images/20250420091339.jpg"/></p>
+<p><img alt="" src="/i/20250420091339.jpg"/></p>
 <p>在办理离职手续的时候，我收到了学信网发送的一志愿待录取通知，历经千辛万苦终于还是等到了~</p>
 <p>我是成都理工大学的环境科学与工程专业，考研考的是川大生物信息学，实际上背负的压力还是很大的，现在回想起当时备考的时候，还是很难受，尤其在十一月份的时候，我感觉我就像一根绷紧的弦，用力稍微过猛就会断了。</p>
 <p>而导师也正是我在 2024 年一月份就已经面谈过的马涛老师，主要的研究内容就是林木进化基因组学，不出意外的话，以后我的研究发现也大概率是这个。不过马老师有意让我搞大模型了，目前在做 Alphafold3 和 evo2 相关的一些工作，AI 还是火啊，各行各业都是，而我在科伦的实习经历也变得愈发重要了，还是感谢熊博和蒋博给予的指导。马老师也很 push，最近已经做了许多工作，我也想多做点东西，日后可以申一个好一点的博士（如果三年后还想读的话），历经了这么多困难，最终还是走上了我最期待的道路。</p>
@@ -13,11 +13,11 @@
 </blockquote>
 <h2>最后的本科时光</h2>
 <p>离职后，在成都做完毕业论文主体的机器学习部分后，我还是回了宜宾校区，毕竟在这里呆了三年多，我绝大部分的大学生活都是在这里度过的。当然，还有另一层原因，就是成都校区的设施实在令我难以接受 ... 前天跟校车回来的时候，朋友还在说，成都待久了，回来突然有一种家的感觉。虽然感觉多半的本科生活都是浑浑噩噩，非常迷茫的，但是对这里还是很怀念。后面较短的一段时间内，我应该会一直待在这里了。</p>
-<p><img alt="" src="/images/20250420093929.jpg"/></p>
+<p><img alt="" src="/i/20250420093929.jpg"/></p>
 <h2>游戏</h2>
 <p>自从入职科伦后，我就有点迷上打游戏了，之前一直玩的是无畏契约和 CSGO，最近喜欢买一些 steam 的打折游戏来玩，玩的最久的就是文明 6 了，之前在手机上玩，感觉不是很给力，趁着打折直接买了，玩的还不是很明白，总是动不动就被人家给按在地上摩擦😂</p>
 <p>离职后，我又顺手买了 Xbox，玩游戏的体验提升了不少，用它玩人类一败涂地、这是我的战争、星露谷等等这些游戏还是不错的。我还买了大表哥 2 和小丑牌，前者是久负盛名啊，后者是 V2 老哥极力推荐的，但是玩的还不多，先不评价。</p>
-<p><img alt="" src="/images/20250420095725.jpg"/></p>
+<p><img alt="" src="/i/20250420095725.jpg"/></p>
 <p>其他一些玩过的游戏：</p>
 <ul>
 <li>双人成行</li>
@@ -30,6 +30,6 @@
 <p>还有很多没有玩，以后慢慢体验咯。</p>
 <h2>生活点滴</h2>
 <p>成都西部食品城旁边的油菜花田：</p>
-<p><img alt="" src="/images/20250420100055.jpg"/></p>
+<p><img alt="" src="/i/20250420100055.jpg"/></p>
 <p>学校顶楼拍的学校图书馆与实验楼：</p>
-<p><img alt="" src="/images/20250420100045.jpg"/></p>
+<p><img alt="" src="/i/20250420100045.jpg"/></p>
