--- a/yuanj.top/月末成都散心.html
+++ b/yuanj.top/月末成都散心.html
@@ -1,4 +1,4 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/月末成都散心.md">仓库源文</a>，<a href="https://yuanj.top/posts/u5l7o4n4">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/relax-in-chengdu.md">仓库源文</a>，<a href="https://yuanj.top/relax-in-chengdu">站点原文</a></h2>
 <p>借着导游证面试的机会，在成都呆了三天，算是散散心吧，前段时间一直很压抑，也总是心神不宁的，到成都与一位老同学一起玩了两天（朋友第二天才来），释放一下压力。</p>
 &lt;!--more--&gt;
 
@@ -8,7 +8,7 @@
 <p>一起聊着以前干过的坏事和蠢事，过去多年的时光依旧清晰地浮现在眼前 ...</p>
 <p>明天约了黄老师吃饭，还不确定他有没有时间，总之明天是要回学校了，回去之后又要面临繁多的事务、作业、报告等等（毕竟安乐只能是一时，奋斗才是长久！），其实我也从来不怕压力大，我觉得在高压之下才能真正激发我的潜力，不过长期处于高压状态总归是不好的，还是需要适当的解压，此次成都之行便是对前段时间努力的一个小小的奖励吧。</p>
 <p>这几天虽然没有去什么景点游玩，但确实是很开心，这也达到了我的目的不是吗？这几天放下所有的事情，每天就是吃喝玩乐，玩的开心，吃得香，单纯为了开心、放松而已。</p>
-<p><img alt="" src="/images/202312022312736.png"/></p>
+<p><img alt="" src="/i/20231202231273.jpg"/></p>
 <p>（ps：二仙桥附近铁建广场的鸡毛店不错，川菜很香）</p>
 <p>实际上现在我已经不是很喜欢去各个地方的景点去玩，很简单，就是感觉累，而且去一趟也就是看了些新东西，拍了些新照片而已，这似乎已经不是游玩本身所应该具有的价值。</p>
 <p>与朋友也做了约定，如果寒假大家时间合适，就去西安华山论剑~哈哈哈。</p>
