--- a/yuanj.top/海蒂和爷爷的故事.html
+++ b/yuanj.top/海蒂和爷爷的故事.html
@@ -1,11 +1,11 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/海蒂和爷爷的故事.md">仓库源文</a>，<a href="https://yuanj.top/posts/j4q7z8w6">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/the-story-of-heidi.md">仓库源文</a>，<a href="https://yuanj.top/the-story-of-heidi">站点原文</a></h2>
 <p>课程设计已经写到神志不清了，所以翻出之前收藏的电影，选了一部《海蒂和爷爷》来看，昨晚刚刚看完这个电影的原版小说。</p>
 &lt;!--more--&gt;
 
 <p>很久之前就看到这个电影了，但是一直没去看，这个电影在豆瓣上评价也是很高的，一直没顾上看，就先看了小说，小说名叫《海蒂》。这个电影是很好看的，但是个人感觉和小说比起来有不少的瑕疵，结局也没有小说的完美。</p>
 <p>这个电影带给我的第一印象就是，主角海蒂真的好看+可爱，感觉让人看不够，感觉确实像是天真无邪的天使一般，这个笑容！！</p>
-<p><img alt="" src="/images/202406241548658.png"/></p>
+<p><img alt="" src="/i/20240624154865.jpg"/></p>
 <p>故事贯穿始终，无非表达了纯真的海蒂驱散了爷爷、佩特、佩特奶奶、克拉拉等人心中的孤独与苦闷，而小说里面叙述的故事更多，海蒂经常给佩特奶奶念诗，但因为不能每天去，所以教会佩特识字以便每天给奶奶念诗；医生家中出现了事故去和海蒂生活了一段时间，被海蒂和阿尔卑斯山的美景所感染，不再陷入痛苦，最终他与海蒂和爷爷一同抚养海蒂；克拉拉在海蒂和爷爷的共同照顾下始终坚持练习腿部最终恢复；爷爷经海蒂的“开导”后重新融入山下的村子与村里人共同快乐生活 ... 等等，这些很多都是电影里没有叙述到的细节，但我认为这些细节才更能够表现出海蒂的纯真给周围的人带来幸福与感动。</p>
 <p>看这个小说的时候，也能真切的感受到外国人和中国人表达上的差异，外国人表达感情的时候是非常直接，不含蓄，让人感觉总是在感叹，几乎是无处不在的赞美，让我想起之前在 V2 看到的一个词，忘记了叫什么 ... 好像是叫溢赞？</p>
 <p>说回海蒂，小说中比电影表现出了另一种中心思想，也就是虔诚地面对上帝，坚持祷告，小说里，海蒂坚持祷告最终成功回家，爷爷因为去教堂做礼拜被山下村子里的人所接受，克拉拉真诚祈祷最终双腿恢复 ... 感觉是想告诉人们，心存良知与真诚，一切都会好起来吧。</p>
-<p><img alt="" src="/images/202406241604322.png"/></p>
+<p><img alt="" src="/i/20240624160432.jpg"/></p>
