--- a/yuanj.top/社交媒体真的这么重要吗.html
+++ b/yuanj.top/社交媒体真的这么重要吗.html
@@ -1,9 +1,9 @@
-<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/posts/importance-of-social-media.md">仓库源文</a>，<a href="https://yuanj.top/importance-of-social-media">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/importance-of-social-media.md">仓库源文</a>，<a href="https://yuanj.top/importance-of-social-media">站点原文</a></h2>
 <p>今天无意中读到一篇文章 <a href="https://dataoverhaulers.com/people-without-social-media/">《People Without Social Media: Why They Don’t Use It》</a> 感觉有点启发。</p>
 &lt;!--more--&gt;
 
 <p>我们似乎花了太多时间在社交媒体上，比如微信、抖音、QQ 之类的，于是我也查看了一下我的软件使用时间：</p>
-<p>&lt;img src="/images/20231012122449.jpg" width=250px/&gt;</p>
+<p>&lt;img src="/i/20231012122449.jpg" width=250px/&gt;</p>
 <p>碎片化的阅读和浏览似乎对我们专注做一件事有着巨大的负面影响，试问现在有多少人能够静下心来看完一本书？</p>
 <p>但有些软件似乎我们也是离不开的，比如我：</p>
 <ul>
