--- a/yuanj.top/还是 WSL 舒服一点.html
+++ b/yuanj.top/还是 WSL 舒服一点.html
@@ -1,4 +1,4 @@
-<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/posts/wsl-is-more-comfortable.md">仓库源文</a>，<a href="https://yuanj.top/wsl-is-more-comfortable">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/wsl-is-more-comfortable.md">仓库源文</a>，<a href="https://yuanj.top/wsl-is-more-comfortable">站点原文</a></h2>
 <p>用了一段时间的 scoop，实在是忍不了了，还是灰溜溜地开了 WSL😢</p>
 &lt;!--more--&gt;
 
@@ -9,7 +9,7 @@
 <li>scoop 的命令似乎对 git bash 的支持并不好，比如我要通过 bash 更新所有软件<code>scoop update -k *</code>，它会先检查 buckets 的更新，然后目标定向为当前目录下的所有文件夹 ...</li>
 <li>有些软件自己会更新，容易导致和 scoop 版本不匹配</li>
 </ul>
-<p><img alt="" src="/images/20240611164091.jpg"/></p>
+<p><img alt="" src="/i/20240611164091.jpg"/></p>
 <p>而且，bash 在 Windows Terminal 里是很不错很美观的，但是在 vscode 里面就似乎不是很舒服了 ...</p>
 <p>所以，我改用 scoop 来安装一些开源的简单的软件如 telegram、zotero 等等，然后开发环境还是老老实实用 WSL2。以前 WSL2 上装的是 Debian，但是软件包一直不咋更新，版本容易落后，所以换成了 Arch，舒服多了，Debian 上装 R 包经常容易出现缺库的现象，我本以为 Arch 也一样的，但是没有，居然很少缺库，只需要装几个重要的包就基本足够了，实在是舒服啊~</p>
 <pre><code class="lang-bash">sudo pacman -S cmake gdal geos proj gcc-fortran
@@ -42,6 +42,6 @@ sparseVhd=true
 autoMemoryReclaim=dropcache
 </code></pre>
 <p>但是现在发现好像不需要了，最新版的 WSL2 据说可以自动回收内存了，我也感受到了，在经历了编译时占用 CPU 98%和 15 GB 内存后，编译结束 CPU 立刻降下去了，内存也降到 4GB 一直停着了，也算是可以了。</p>
-<p><img alt="" src="/images/20240611165082.jpg"/></p>
+<p><img alt="" src="/i/20240611165082.jpg"/></p>
 <p>WSL2 主要还可以用 pymol、gromacs、deeptools 等等的软件，Windows 就不行，超算又不方便，所以自己的还是好一些。于是一切又熟悉又舒适了，游戏也删掉了~ 至于性能损失，损失就损失了吧 ...</p>
 <p>跑了一下 acATAC-seq 流程，占用大概稳定在 13GB 左右，我的内存是 32GB 的，总体还是不错的。</p>
