--- a/gitee.com/Kenneth-Lee-2012/MySummary/Linux内核页表.html
+++ b/gitee.com/Kenneth-Lee-2012/MySummary/Linux内核页表.html
@@ -82,7 +82,7 @@ XXX[]表示这个页表项组成的页表。</p>
 <p>pfn_XXX(XXX, prot)
         从pfn求XXX</p>
 <p>XXX_pfn(pfn)
-        从XXX球pfn</p>
+        从XXX求pfn</p>
 <p>XXX_page_vaddr(XXX)
         从XXX求下一级页表的虚拟地址</p>
 <p>pfn_pte(pte)/pfn_pte(pfn, prot)
