--- a/kexizeroing.github.io/Curated link collection.html
+++ b/kexizeroing.github.io/Curated link collection.html
@@ -10,14 +10,13 @@
 <p>High Performance Browser Networking: <a href="https://hpbn.co">https://hpbn.co</a></p>
 <p>Modern JavaScript-based web development: <a href="https://fullstackopen.com/en">https://fullstackopen.com/en</a></p>
 <p>Bash Commands and Tips: <a href="https://dev.to/awwsmm/101-bash-commands-and-tips-for-beginners-to-experts-30je">https://dev.to/awwsmm/101-bash-commands-and-tips-for-beginners-to-experts-30je</a></p>
-<p>Learn Node.js: <a href="https://nodejs.org/en/learn">https://nodejs.org/en/learn</a></p>
 <p>Docker Guide: <a href="https://www.robertcooper.me/docker-guide">https://www.robertcooper.me/docker-guide</a></p>
 <p>Tail Call Optimization: <a href="https://www.youtube.com/watch?v=-PX0BV9hGZY">https://www.youtube.com/watch?v=-PX0BV9hGZY</a></p>
 <p>Modern Web App Design Patterns: <a href="https://www.patterns.dev">https://www.patterns.dev</a></p>
 <p>What happens when we type google.com in a browser: <a href="https://github.com/vasanthk/how-web-works">https://github.com/vasanthk/how-web-works</a></p>
 <p>Machine Learning for Beginners: <a href="https://github.com/microsoft/ML-For-Beginners">https://github.com/microsoft/ML-For-Beginners</a></p>
 <p>Artificial Intelligence for Beginners: <a href="https://github.com/microsoft/AI-For-Beginners">https://github.com/microsoft/AI-For-Beginners</a></p>
-<p>Get Started Building AI Agents: <a href="https://github.com/microsoft/ai-agents-for-beginners">https://github.com/microsoft/ai-agents-for-beginners</a></p>
+<p>MCP for Beginners: <a href="https://github.com/microsoft/mcp-for-beginners">https://github.com/microsoft/mcp-for-beginners</a></p>
 <p>90DaysOfDevOps: <a href="https://github.com/MichaelCade/90DaysOfDevOps">https://github.com/MichaelCade/90DaysOfDevOps</a></p>
 <p>Beginner's TypeScript tutorial: <a href="https://www.totaltypescript.com/tutorials">https://www.totaltypescript.com/tutorials</a></p>
 <p>Total TypeScript Essentials: <a href="https://www.totaltypescript.com/books/total-typescript-essentials">https://www.totaltypescript.com/books/total-typescript-essentials</a></p>
@@ -64,7 +63,6 @@
 <p>Get an insight into the inner-workings of a given website: <a href="https://web-check.xyz">https://web-check.xyz</a></p>
 <p>Astro starter powered by MPA view transitions: <a href="https://github.com/argyleink/morphull">https://github.com/argyleink/morphull</a></p>
 <p>Web accessibility interactive quizzes: <a href="https://www.a11yiseverything.com/quizzes/aria-label">https://www.a11yiseverything.com/quizzes/aria-label</a></p>
-<p>DGM is an online diagramming app: <a href="https://dgm.sh/home">https://dgm.sh/home</a></p>
 <p>A tool for writing better scripts: <a href="https://github.com/google/zx">https://github.com/google/zx</a></p>
 <p>The resource you’ll ever need for mechanical keyboards: <a href="https://www.keyboard.university">https://www.keyboard.university</a></p>
 <p>Sleek Framer UI components: <a href="https://drams.framer.website">https://drams.framer.website</a></p>
@@ -87,6 +85,8 @@
 <p>Google Chrome Dino 3D WebGL game: <a href="https://github.com/addyosmani/chrome-dino-3d">https://github.com/addyosmani/chrome-dino-3d</a></p>
 <p>Writing down and searching through every UUID: <a href="https://eieio.games/blog/writing-down-every-uuid">https://eieio.games/blog/writing-down-every-uuid</a></p>
 <p>Hypertext TV shared schedule for the web: <a href="https://hypertext.tv">https://hypertext.tv</a></p>
+<p>Desktop environment in the browser: <a href="https://github.com/DustinBrett/daedalOS">https://github.com/DustinBrett/daedalOS</a></p>
+<p>The avatar library you've always been looking for: <a href="https://www.dicebear.com">https://www.dicebear.com</a></p>
 <hr/>
 <h2>CSS related</h2>
 <p>Defensive CSS - writing CSS that is protected: <a href="https://ishadeed.com/article/defensive-css">https://ishadeed.com/article/defensive-css</a></p>
@@ -223,6 +223,7 @@
 <p>Clerk official SDK for Vue: <a href="https://clerk.com/changelog/2025-01-07-vue-and-nuxt-sdk">https://clerk.com/changelog/2025-01-07-vue-and-nuxt-sdk</a></p>
 <p>Vue Dashboard Template made with Nuxt UI Pro: <a href="https://github.com/nuxt-ui-pro/dashboard-vue">https://github.com/nuxt-ui-pro/dashboard-vue</a></p>
 <p>A collection of ready-to-use plugins and composables: <a href="https://www.vue.equipment">https://www.vue.equipment</a></p>
+<p>Next Generation file based typed routing for Vue Router: <a href="https://github.com/posva/unplugin-vue-router">https://github.com/posva/unplugin-vue-router</a></p>
 <hr/>
 <h2>Browsers related</h2>
 <p>Google Chrome upcoming schedule: <a href="https://chromiumdash.appspot.com/schedule">https://chromiumdash.appspot.com/schedule</a></p>
@@ -301,6 +302,8 @@
 <p>GPT-4o Image Prompts Gallery: <a href="https://github.com/ImgEdify/Awesome-GPT4o-Image-Prompts">https://github.com/ImgEdify/Awesome-GPT4o-Image-Prompts</a></p>
 <p>Up-to-date documentation you can talk to for every repo in the world: <a href="https://deepwiki.com">https://deepwiki.com</a></p>
 <p>CLI for interacting with MCP servers: <a href="https://github.com/f/mcptools">https://github.com/f/mcptools</a></p>
+<p>Real-time conversational AI models run locally: <a href="https://huggingface.co/spaces/webml-community/conversational-webgpu">https://huggingface.co/spaces/webml-community/conversational-webgpu</a></p>
+<p>Cloudflare Workers AI: <a href="https://playground.ai.cloudflare.com">https://playground.ai.cloudflare.com</a></p>
 <hr/>
 <h2>Machine Learning</h2>
 <p>Stanford CS229 Machine Learning: <a href="https://cs229.stanford.edu">https://cs229.stanford.edu</a></p>
