--- a/kexizeroing.github.io/How common web development tools work under the hood.html
+++ b/kexizeroing.github.io/How common web development tools work under the hood.html
@@ -9,6 +9,7 @@
 <li><a href="#simple-bundler">Simple bundler</a></li>
 <li><a href="#hot-module-replacement">Hot Module Replacement</a></li>
 <li><a href="#source-maps">Source Maps</a></li>
+<li><a href="#babel-transpiler-and-plugin">Babel Transpiler and Plugin</a></li>
 </ul>
 <h2>Compile Vue SFC to JS</h2>
 <p>High level compilation process: 
@@ -618,3 +619,109 @@ CAIF
 It means: col 26 is mapping to source[0] line 9, col 14
 </code></pre>
 <p>&lt;img alt="how source maps work" src="https://raw.gitmirror.com/kexiZeroing/blog-images/main/source-map-under-the-hood.png" width="600" /&gt;</p>
+<h2>Babel Transpiler and Plugin</h2>
+<p>You give Babel some JavaScript code, Babel modifies the code, and generates the new code back out. Each of these steps involve creating or working with an Abstract Syntax Tree or AST.</p>
+<pre><code class="lang-js">function square(n) {
+  return n * n;
+}
+
+// https://astexplorer.net/#/Z1exs6BWMq
+{
+  type: "FunctionDeclaration",
+  id: {
+    type: "Identifier",
+    name: "square"
+  },
+  params: [{
+    type: "Identifier",
+    name: "n"
+  }],
+  body: {
+    type: "BlockStatement",
+    body: [{
+      type: "ReturnStatement",
+      argument: {
+        type: "BinaryExpression",
+        operator: "*",
+        left: {
+          type: "Identifier",
+          name: "n"
+        },
+        right: {
+          type: "Identifier",
+          name: "n"
+        }
+      }
+    }]
+  }
+}
+</code></pre>
+<p>There are two ways to transform JavaScript with Babel.</p>
+<ol>
+<li>Manual AST Transformation (Using <code>@babel/parser</code>, <code>@babel/traverse</code>, and <code>@babel/generator</code>).</li>
+<li>Babel Plugin + <code>babel.transformSync</code>. You focus only on the transformation logic (<code>visitor</code> function), and let Babel take care of parsing, walking, and generating code.</li>
+</ol>
+<p>The following is the general template of using babel to do code transformation:</p>
+<pre><code class="lang-js">import { parse } from '@babel/parser';
+import traverse from '@babel/traverse';
+import generate from '@babel/generator';
+
+const code = 'const n = 1';
+
+// parse the code -&gt; ast
+const ast = parse(code);
+
+// transform the ast
+traverse(ast, {
+  enter(path) {
+    // in this example change all the variable `n` to `x`
+    if (path.isIdentifier({ name: 'n' })) {
+      path.node.name = 'x';
+    }
+  },
+});
+
+// generate code &lt;- ast
+const output = generate(ast, { /* generator options */ });
+console.log(output.code); // 'const x = 1;'
+</code></pre>
+<p>Another way is writing a custom plugin (may integrate into build tools). They have same functional output.</p>
+<pre><code class="lang-js">import babel from '@babel/core';
+
+const code = 'const n = 1';
+
+const renameVariablePlugin = (options = {}) =&gt; {
+  const { from = 'n', to = 'x' } = options;
+  return {
+    visitor: {
+      Identifier(path) {
+        if (path.node.name === from) {
+          path.node.name = to;
+        }
+      }
+    }
+  };
+};
+
+// OPTION 1: Using babel.transformSync
+const result = babel.transformSync(code, {
+  plugins: [[renameVariablePlugin, { from: 'n', to: 'x' }]]
+});
+
+console.log(result.code); // 'const x = 1;'
+
+// OPTION 2: Using babel-loader in webpack
+rules: [
+  {
+    test: /\.js$/,
+    use: {
+      loader: 'babel-loader',
+      options: {
+        plugins: [
+          [path.resolve('./babel-plugin.js'), { from: 'n', to: 'x' }]
+        ]
+      }
+    }
+  }
+]
+</code></pre>
