--- a/kexizeroing.github.io/Notes on domain-specific ChatGPT.html
+++ b/kexizeroing.github.io/Notes on domain-specific ChatGPT.html
@@ -24,6 +24,15 @@ decoded_text = tokenizer.decode(token)
 print(decoded_text)
 # Apple is a fruit
 </code></pre>
+<pre><code class="lang-js">// npm install js-tiktoken
+// This is a pure JS port of the original tiktoken library.
+
+import { Tiktoken } from "js-tiktoken/lite";
+import o200k_base from "js-tiktoken/ranks/o200k_base";
+
+const enc = new Tiktoken(o200k_base);
+assert(enc.decode(enc.encode("hello world")) === "hello world");
+</code></pre>
 <blockquote><p>Language models don't see text like you and I, instead they see a sequence of tokens. Byte pair encoding (BPE) is a way of converting text into tokens used in GPT.</p>
 <ul>
 <li>It's reversible and lossless, so you can convert tokens back into the original text.</li>
