--- a/kexizeroing.github.io/Notes on work projects (in Chinese).html
+++ b/kexizeroing.github.io/Notes on work projects (in Chinese).html
@@ -241,6 +241,15 @@ declare module "*.vue" {
 <p>The above checks if the environment variable <code>CI_COMMIT_TAG</code> is empty (meaning it's not a tag build). If that's the case, it uses sed to perform an in-place replacement in the <code>package.json</code> file. Specifically, it looks for lines that start with "version": "[0-9.]+" and replaces them with a new version format <code>0.0.0-${prefixOss}-${CI_COMMIT_SHORT_SHA}</code>. This script appears to be adjusting versioning and paths based on the branch or tag being built in a CI/CD pipeline.</p>
 <blockquote><p>The <code>s</code> command is for substitute, to replace text -- the format is <code>s/[text to select]/[text to replace]/</code>. For example, <code>sed 's/target/replacement/g' file.txt</code> will globally substitute the word <code>target</code> with <code>replacement</code>.</p>
 </blockquote>
+<h4>基于 Docker + Terraform + GitLab CI/CD 的部署</h4>
+<p>整体目标：通过 GitLab CI/CD 自动构建包含 Terraform 配置的 Docker 镜像，在容器中执行计划（plan）与部署（apply），实现多个项目环境的基础设施部署。</p>
+<ul>
+<li><code>Dockerfile.base</code>：使用阿里云镜像，安装了各种工具 aliyun CLI、terraform、ossutil64、websocat，添加了阿里云的 AK/SK 凭据和配置 profile（方便后续 terraform 操作时访问阿里云资源）。</li>
+<li><code>Dockerfile</code>：基于 <code>Dockerfile.base</code> 生成一个新的部署镜像，拷贝了 terraform 配置，对每个环境都做了 <code>terraform init</code> 和 <code>terraform plan</code>。这里的计划是提前计算好的“基础设施变更内容”，保存下来，后续可以直接 apply。</li>
+<li><code>gitlab-ci.yml</code>：使用 <code>kaniko</code> 工具构建镜像，用 Dockerfile 构建出包含所有 Terraform 配置和计划的镜像，并推送到私有仓库，保证部署时拿到同样的镜像和计划。</li>
+<li>Test 阶段：运行刚构建的镜像，执行 <code>/root/scripts/show_plan.sh</code>，打印出所有计划内容，即对每个模块用 <code>terraform show</code> 展示 plan 文件的内容，确保没有问题。</li>
+<li>Deploy 阶段：部署脚本核心就是 <code>terraform apply /root/plan/{env}</code>。在镜像构建阶段就把所有 plan 做好，在部署阶段只需要 apply，可控且快速。</li>
+</ul>
 <h3>实时检测 web 应用更新</h3>
 <p>当应用发布新版本时，考虑及时通知用户并引导其刷新页面以加载最新资源。</p>
 <ol>
