--- a/www.zhaohuabing.com/Istio Ambient 模式流量管理实现机制详解（一）.html
+++ b/www.zhaohuabing.com/Istio Ambient 模式流量管理实现机制详解（一）.html
@@ -1,24 +1,45 @@
 <h2><a href="https://github.com/zhaohuabing/hugo_blog/blob/master/content/post/2022-09-11-ambient-deep-dive-1.md">仓库源文</a>，<a href="https://www.zhaohuabing.com/post/2022-09-11-ambient-deep-dive-1">站点原文</a></h2>
-<p>Istio ambient 模式采用了被称为 <a href="https://www.zhaohuabing.com/post/2022-09-08-introducing-ambient-mesh/#%E6%9E%84%E5%BB%BA%E4%B8%80%E4%B8%AA-ambient-mesh">HBONE</a> 的方式来连接 ztunnel 和 waypoint proxy。HBONE 是 HTTP-Based Overlay Network Environment 的缩写。虽然该名称是第一次看到，其实 HBONE 并不是 Istio 创建出来的一个新协议，而只是利用了 HTTP 协议标准提供的隧道能力。简单地说，ambient 模式采用了 <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/CONNECT">HTTP 的 CONNECT 方法</a> 在 ztunnel 和 waypoint proxy 创建了一个隧道，通过该隧道来传输数据。本文将分析 HBONE 的实现机制和原理。</p>
+<p>Istio ambient 模式采用了被称为 <a href="https://www.zhaohuabing.com/post/2022-09-08-introducing-ambient-mesh/#%E6%9E%84%E5%BB%BA%E4%B8%80%E4%B8%AA-ambient-mesh">HBONE</a> 的
+方式来连接 ztunnel 和 waypoint proxy。HBONE 是 HTTP-Based Overlay Network Environment 的缩写。虽然是一个新的名词，但其实 HBONE 并不是 Istio 创建出来的一个新协议，而只是利用了 HTTP 协议标准提供的隧道能力。简单地说，ambient 模式采用了 <a href="https://developer.mozilla.org/en-US/docs/Web/HTTP/Methods/CONNECT">HTTP 的 CONNECT 方法</a> 在 ztunnel 和 waypoint proxy 创建了一个隧道，通过该隧道来传输数据。本文将分析 HBONE 的实现机制和原理。</p>
 <h1>HTTP 隧道原理</h1>
 <p>建立 HTTP 隧道的常见形式是采用 HTTP 协议的 CONNECT 方法。在这种机制下，客户端首先向 HTTP 代理服务器发送一个 HTTP CONNECT 请求，请求中携带需要连接的目的服务器。代理服务器根据该请求代表客户端连接目的服务器。和目的服务器建立连接后，代理服务器将客户端 TCP 数据流直接透明地传送给目的服务器。在这种方式中，只有初始连接请求是 HTTP，之后代理服务器处理的是 TCP 数据流。</p>
-<p><img alt="" src="/img/2022-09-11-ambient-hbone/http-tunnel.png"/></p>
+<p><img alt="" src="/img/2022-09-11-ambient-hbone/http11-tunnel.png"/></p>
 &lt;p style="text-align: center;"&gt;HTTP CONNECT 隧道&lt;/p&gt;<p>通过这种方法，我们可以采用 HTTP CONNECT 创建一个隧道，该隧道中可以传输任何类型的 TCP 数据。</p>
-<p>例如在一个内网环境中，我们只允许通过 HTTP 代理来访问外部的 web 服务器。但我们可以通过 HTTP 隧道的方式来连接到一个外部的 SSH 服务器上。。</p>
-<p>客户端连接到代理服务器，发送 HTTP CONNECT 请求通过和指定主机的 22 端口建立隧道。</p>
-<pre><code>CONNECT for.bar.com:22 HTTP/1.1
+<p>假设我们有一个运行在 <code>127.0.0.1</code> 的 10080 端口的 HTTP 代理服务器，我们想通过该代理服务器连接到外部的服务器 <code>httpbin.org</code> 的 80 端口。我们可以使用 Telnet 来模拟这个过程。</p>
+<p>首先通过 Telnet 连接到代理服务器。</p>
+<pre><code class="lang-bash">telnet 127.0.0.1 10080
+Trying 127.0.0.1...
+Connected to 127.0.0.1.
+Escape character is '^]'.
 </code></pre>
-<p>如果代理允许连接，并且代理已连接到指定的主机，则代理将返回2XX成功响应。</p>
-<pre><code>HTTP/1.1 200 OK
+<p>接下来发送 HTTP CONNECT 请求，请求代理服务器连接到 <code>httpbin.org</code> 的 80 端口。</p>
+<pre><code class="lang-bash">CONNECT httpbin.org HTTP/1.1
 </code></pre>
-<p>现在客户端将通过代理访问远程主机。 发送到代理服务器的所有数据都将原封不动地转发到远程主机。</p>
-<p>客户端和服务器开始 SSH 通信。</p>
-<pre><code>SSH-2.0-OpenSSH_4.3\r\n
-... ggg
+<p>如果代理允许连接，它将返回一个 HTTP 200 响应，表示已经和远程主机建立了连接。</p>
+<pre><code class="lang-bash">HTTP/1.1 200 Connection established
 </code></pre>
-<blockquote><p>备注：除了 HTTP CONNECT 以外，采用 HTTP GET 和 POST 也可以创建 HTTP 隧道，这种方式创建的隧道的原理是将 TCP 数据封装到 HTTP 数据包中发送到外部服务器，该外部服务器会提取并执行客户端的原始网络请求。外部服务器收到此请求的响应后，将其重新打包为HTTP响应，并发送回客户端。在这种方式中，客户端所有流量都封装在 HTTP GET 或者 POST 请求中。</p>
-</blockquote>
-<h1>Envoy 的 Internal Listener 机制</h1>
+<p>现在客户端就可以通过代理访问远程主机。 发送到代理服务器的所有数据都将原封不动地转发到远程主机，远程主机返回的数据也将原封不动地转发到客户端。
+例如发送一个 HTTP GET 请求到 <code>httpbin.org</code> 的 <code>/status/200</code> 路径：</p>
+<pre><code class="lang-bash">GET /status/200 HTTP/1.1
+Host: httpbin.org
+</code></pre>
+<p>代理服务器将会将这个请求转发到 <code>httpbin.org</code>，并将服务器的响应返回给客户端。</p>
+<pre><code class="lang-bash">HTTP/1.1 200 OK
+Date: Tue, 27 May 2025 02:27:35 GMT
+Content-Type: text/html; charset=utf-8
+Content-Length: 0
+Connection: keep-alive
+Server: gunicorn/19.9.0
+Access-Control-Allow-Origin: *
+Access-Control-Allow-Credentials: true
+</code></pre>
+<h1>HTTP2 隧道</h1>
+<p>HTTP/1.1 CONNECT 可以在客户端和代理服务器之间创建一个隧道，但它有一个缺点：每个隧道都需要一个独立的 TCP 连接，这会导致大量的连接开销。
+采用 HTTP/2 可以解决这个问题。HTTP/2 的设计允许在同一个 TCP 连接上创建多个流（stream），每个流可以独立地发送和接收数据。
+HTTP/2 也支持 CONNECT 方法，其使用方法和 HTTP/1.1 的 CONNECT 方法类似，但在 HTTP/2 中，一个 隧道是一个 HTTP2 的 stream，而不是一个 TCP 连接。
+因此采用 HTTP/2 CONNECT 可以在同一个 TCP 连接上创建多个隧道，从而减少连接开销。Istio ambient 模式中采用的 HBONE 隧道就是基于 HTTP/2 CONNECT 方法来实现的。</p>
+<p><img alt="" src="/img/2022-09-11-ambient-hbone/http2-tunnel.png"/></p>
+&lt;p style="text-align: center;"&gt;HTTP/2 CONNECT 隧道&lt;/p&gt;<h1>Envoy 的 Internal Listener 机制</h1>
 <p>我们知道，<a href="https://man7.org/linux/man-pages/man2/socket.2.html">socket</a> 在操作系统内核接收网络数据，但 Envoy 还支持一种“用户空间 socket”。<a href="https://www.envoyproxy.io/docs/envoy/latest/configuration/other_features/internal_listener">Internal Listener</a> 就用于从该“用户空间 socket”接收数据包。</p>
 <p>Internal Listener 需要和一个 Cluster 一起使用，配置在 Cluster 中作为接收流量的 endpoint。如下所示：</p>
 <p>定义一个 Internal Listener：</p>
