--- a/yuanj.top/TBtools 完成论文复现.html
+++ b/yuanj.top/TBtools 完成论文复现.html
@@ -44,11 +44,11 @@ MDRAALTVGPGMDMPIMHDGDRYELVRDIGSGNFGVARLMRSRADGQLVAVKYIERGDKIDENVQREIINHRSLRHPNII
 <p>结构域（domain）是位于超二级结构和三级结构间的一个层次。结构域是在蛋白质的三级结构内的独立折叠单元，通常都是几个超二级结构单元的组合。在较大的蛋白质分子中，由于多肽链上相邻的超二级结构紧密联系，进一步折叠形成一个或多个相对独立的致密三维实体，即结构域。</p>
 <p>结构域实质上是二级结构的组合体，充当三级结构的构件。每个结构域分别代表一种功能。</p>
 <p>原文中基因家族是指水稻中一系列具有 S_TKc 结构域的基因，是磷酸转移酶，丝氨酸或苏氨酸特异性激酶亚家族。我们可以在 SMART 网站查看该结构域的信息：<a href="http://smart.embl.de/smart/do_annotation.pl?DOMAIN=SM00220">S_TKc</a>。补充材料里面也提供了基因的蛋白序列，我们直接拿过来用。将蛋白序列粘贴到 <a href="http://smart.embl.de/">SMART 网站</a> 查看结构域：</p>
-<p><img alt="" src="/images/20240427092258.jpg"/></p>
+<p><img alt="" src="/i/20240427092258.jpg"/></p>
 <p>结果显示所有的基因都是具有 S_TKc 结构域的。但是个人感觉 SMART 网站的结果可能看上去不是很友好，我喜欢用 <a href="https://www.ncbi.nlm.nih.gov/Structure/bwrpsb/bwrpsb.cgi">NCBI CD-search</a>，也是上传序列开始分析即可，显示效果更加直观：</p>
-<p><img alt="" src="/images/20240427092304.jpg"/></p>
+<p><img alt="" src="/i/20240427092304.jpg"/></p>
 <p>并且也可以用 TBtools 做成图：</p>
-<p><img alt="" src="/images/20240427092386.jpg"/></p>
+<p><img alt="" src="/i/20240427092386.jpg"/></p>
 <h2>染色体定位</h2>
 <p>从 <a href="https://plants.ensembl.org/Oryza_sativa/Info/Index">Ensembl plants</a> 下载水稻（日本晴）基因组的注释文件，然后将基因 ID 写在一个文件中：</p>
 <pre><code class="lang-txt">transcript:Os03t0390200-01
@@ -76,17 +76,17 @@ transcript:Os03t0610900-01  OsSAPK10
 </code></pre>
 <p>这里因为 Ensembl plants 下载的注释文件中默认的基因 ID 是转录本的，所以需要对 ID 进行一些处理，加上<code>transcript:</code>再把 Os 的 ID 转换成转录本 ID 即可。</p>
 <p>导入到 TBtools：</p>
-<p><img alt="" src="/images/20240427092353.jpg"/></p>
+<p><img alt="" src="/i/20240427092353.jpg"/></p>
 <p>出图后美化一下：</p>
-<p><img alt="" src="/images/20240427092338.jpg"/></p>
+<p><img alt="" src="/i/20240427092338.jpg"/></p>
 <h2>基因结构分析&amp;motif 分析</h2>
 <p>将蛋白序列上传到 <a href="https://meme-suite.org/meme/tools/meme">meme 网站</a> 后下载输出的 xml 文件即可，但是网页版 MEME Suite 经常要排队，所以可以用 TBtools 进行本地分析：</p>
-<p><img alt="" src="/images/20240427092331.jpg"/></p>
+<p><img alt="" src="/i/20240427092331.jpg"/></p>
 <p>再将输出的 xml 文件可视化：</p>
-<p><img alt="" src="/images/20240427092365.jpg"/></p>
+<p><img alt="" src="/i/20240427092365.jpg"/></p>
 <p>通常我们将基因结构、domain、motif 展示在一张图上：</p>
-<p><img alt="" src="/images/20240427092443.jpg"/></p>
-<p><img alt="" src="/images/20240427092488.jpg"/></p>
+<p><img alt="" src="/i/20240427092443.jpg"/></p>
+<p><img alt="" src="/i/20240427092488.jpg"/></p>
 <h2>系统发育树</h2>
 <p>作者将拟南芥和大麦中的 SnRK2 家族基因也放在一起进行了系统发育分析，我在文章"# Genome-wide identification and expression pattern of SnRK gene family under several hormone treatments and its role in floral scent emission in <em>Hedychium coronarium</em>"中找到了 10 个拟南芥 SnRK2 基因，在文章"Genome-Wide Identification, Expression Pattern and Sequence Variation Analysis of <em>SnRK</em> Family Genes in Barley"中找到 11 个大麦 SnRK2 基因，提取其蛋白质序列共同进行系统发育分析：</p>
 <table>
@@ -220,17 +220,17 @@ transcript:Os03t0610900-01  OsSAPK10
 </tbody>
 </table>
 <p>使用 Mega7 分析完之后使用 <a href="https://itol.embl.de/">iTOL 网站</a> 进行美化：</p>
-<p><img alt="" src="/images/20240427092499.jpg"/></p>
+<p><img alt="" src="/i/20240427092499.jpg"/></p>
 <h2>共线性分析</h2>
 <p>共线性分析的步骤比较多，这里不展开赘述：</p>
-<p><img alt="" src="/images/20240427092542.jpg"/></p>
-<p><img alt="" src="/images/20240427092569.jpg"/></p>
+<p><img alt="" src="/i/20240427092542.jpg"/></p>
+<p><img alt="" src="/i/20240427092569.jpg"/></p>
 <h2>多序列比对</h2>
 <p>多序列比对我一般用 <a href="https://www.genome.jp/tools-bin/clustalw">CLUSTALW</a> 和 <a href="https://espript.ibcp.fr/ESPript/cgi-bin/ESPript.cgi">ESPript</a> 来做，将蛋白序列上传到 CLUSTALW 进行多序列比对，下载 aln 的结果后用 ESPript 进行可视化：</p>
-<p><img alt="" src="/images/20240427093322.jpg"/></p>
+<p><img alt="" src="/i/20240427093322.jpg"/></p>
 <h2>蛋白质理化性质分析</h2>
 <p>用 TBtools 即可一键分析，导入蛋白质序列即可：</p>
-<p><img alt="" src="/images/20240427092592.jpg"/></p>
+<p><img alt="" src="/i/20240427092592.jpg"/></p>
 <table>
 <thead><tr>
 <th style="text-align:left">Sequence ID</th>
@@ -349,21 +349,21 @@ transcript:Os03t0610900-01  OsSAPK10
    Ambiguous states (?)  :     0 is   0.00%
    Other states         :     0 is   0.00%
 </code></pre>
-<p><img alt="" src="/images/20240427092543.jpg"/></p>
+<p><img alt="" src="/i/20240427092543.jpg"/></p>
 <p>我这里仅仅分析了 OsSAPK2 的二级结构。</p>
 <p>三级结构用 <a href="https://www.uniprot.org/">UniProt 网站</a>，直接搜索蛋白的 ID 即可：</p>
-<p><img alt="" src="/images/20240427092565.jpg"/></p>
+<p><img alt="" src="/i/20240427092565.jpg"/></p>
 <p>这里我也同样只分析了 OsSAPK2 的三级结构。</p>
 <h2>互作蛋白网络</h2>
 <p>互作蛋白网络使用 STRING 数据库完成，直接输入基因 ID 和物种即可：</p>
-<p><img alt="" src="/images/20240427092509.jpg"/></p>
+<p><img alt="" src="/i/20240427092509.jpg"/></p>
 <p>将数据导出为 tsv 文件后，可以使用 Cytoscape 进行美化。现在已经更新，默认的图已经很漂亮了，此处就不进行美化了。</p>
 <h2>顺式作用元件分析</h2>
 <p>将上游 2000 的 cds 序列上传到 <a href="http://bioinformatics.psb.ugent.be/webtools/plantcare/html/">plantcare 网站</a>，拿到结果后处理一下数据然后导入 TBtools 就可以进行绘图。</p>
-<p><img alt="" src="/images/20240427092675.jpg"/></p>
-<p><img alt="" src="/images/20240427092627.jpg"/></p>
+<p><img alt="" src="/i/20240427092675.jpg"/></p>
+<p><img alt="" src="/i/20240427092627.jpg"/></p>
 <h2>表达热图</h2>
 <p>原文的表达谱数据是从 <a href="https://ricexpro.dna.affrc.go.jp/data-set.html">CREP 数据库</a> 下载的，同样从 CREP 数据库下载表达量数据后用 TBtools 绘制热图即可：</p>
-<p><img alt="" src="/images/20240427092647.jpg"/></p>
+<p><img alt="" src="/i/20240427092647.jpg"/></p>
 <h2>数据可用性</h2>
 <p>本文使用的所有数据均已保存至 GitHub：<a href="https://github.com/imjiaoyuan/bio-code/tree/main/OsSnRK2-GFI">https://github.com/imjiaoyuan/bio-code/tree/main/OsSnRK2-GFI</a></p>
