--- a/yuanj.top/使用 HMMER 查找基因的同源序列.html
+++ b/yuanj.top/使用 HMMER 查找基因的同源序列.html
@@ -1,4 +1,4 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/使用HMMER查找基因的同源序列.md">仓库源文</a>，<a href="https://yuanj.top/posts/de3b1544">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/hmmer-homology-search.md">仓库源文</a>，<a href="https://yuanj.top/hmmer-homology-search">站点原文</a></h2>
 <p>使用 HMMER 查找同源基因比 blast 更加准确，速度也更快，但使用方法很少有文章讲清楚，本文记录我使用 HMMER 的操作。</p>
 &lt;!--more--&gt;
 
@@ -10,14 +10,14 @@
 <h2>下载隐马尔科夫模型</h2>
 <p>我以拟南芥的 SBP 家族为例
 打开 <a href="http://pfam-legacy.xfam.org/">pfam</a>，输入基因家族的 pf 号点击 go 进行查询</p>
-<p><img alt="" src="/images/20230422214309.png"/></p>
+<p><img alt="" src="/i/20230422214309.jpg"/></p>
 <p>也可以通过查询关键字来查找</p>
 <p>查询到之后，点击左边的 Curation &amp; model 下载 hmm 文件</p>
-<p><img alt="" src="/images/20230422214325.png"/></p>
+<p><img alt="" src="/i/20230422214325.jpg"/></p>
 <p>再点击 Alignments 选择 stockholm，点击 gengerate 后会自动下载一个 txt 文件</p>
-<p><img alt="" src="/images/20230422214336.png"/></p>
+<p><img alt="" src="/i/20230422214336.jpg"/></p>
 <h2>安装 HMMER</h2>
-<p>在 Linux 系统环境下，推荐使用 conda 安装 HMMER，conda 的安装配置教程请参照此文章 <a href="https://yuanj.top/posts/z9w5y9m7/">《Linux 下安装 conda》</a></p>
+<p>在 Linux 系统环境下，推荐使用 conda 安装 HMMER</p>
 <pre><code>#创建 Python3.7 的虚拟环境
 conda install -n bioinfo python=3.7
 
@@ -31,7 +31,7 @@ conda install hmmer
 <p>在工作目录下执行命令</p>
 <pre><code>hmmbuild [xxx.hmm] [xxx.txt] #构建 hmm 模型（使用我们再 pfam 网站下载的 hmm 文件和 txt 文件，要保证文件都在同一工作目录下
 </code></pre>
-<p><img alt="" src="/images/20230422214418.png"/></p>
+<p><img alt="" src="/i/20230422214418.jpg"/></p>
 <h2>进行比对</h2>
 <p>在工作目录下执行命令</p>
 <pre><code>hmmsearch [hmm 文件] [待比对物种 fasta 文件] &gt; [输出文件名]  
@@ -42,6 +42,6 @@ conda install hmmer
 <p>比对完成之后使用 cat 命令查看比对的结果</p>
 <pre><code>cat result.out
 </code></pre>
-<p><img alt="" src="/images/20230422214437.png"/></p>
+<p><img alt="" src="/i/20230422214437.jpg"/></p>
 <h2>进一步筛选</h2>
 <p>随后我们可以通过各种数据库如 NCBI、TBtools 的比对工具等，进行进一步筛选，并用 MEME、CD-Search 进一步鉴定，排除“假阳性“。</p>
