--- a/yuanj.top/抛弃 WSL2 使用 scoop 搭建开发环境.html
+++ b/yuanj.top/抛弃 WSL2 使用 scoop 搭建开发环境.html
@@ -1,12 +1,12 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/抛弃WSL使用scoop搭建开发环境.md">仓库源文</a>，<a href="https://yuanj.top/posts/u5b5f4n8">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/abandon-wsl2-use-scoop.md">仓库源文</a>，<a href="https://yuanj.top/abandon-wsl2-use-scoop">站点原文</a></h2>
 <p>之前一直是用 WSL2 来作为开发环境的，博客、数据分析和编程等都在 WSL2 里进行，虽然 WSL2 已经很方便，但是我仍然心里有疙瘩，因为两个原因：Hyper-V 的性能损失和无法自动释放内存/硬盘。</p>
 &lt;!--more--&gt;
 
 <p>实际上后面两个问题在 2.0.0 的 WSL 中（似乎）已经解决了，在去年的更新中，详情可见 <a href="https://devblogs.microsoft.com/commandline/windows-subsystem-for-linux-september-2023-update/">微软开发者 blog</a>，我仔细看了一下，似乎大部分的实质性更新都只在 Windows11 中适用，但是根据描述，部分实验性更新在 Windows10 中是可以用的，毕竟 Windows11 还是太抽象（个人感觉），我最关注的两个功能即内存回收与虚拟硬盘空间释放，似乎在 Windows10 中可用，但我测试了一下，使用 Windows10 LTSC 2021 最新可更新的 WSL，两项功能在 .wslconfig 中可以正常启用，但没有效果。另一大问题就是性能损失问题了，据我个人测试，开启虚拟化之后 Windows 宿主机造成了大约 12%的性能损失。</p>
 <p>下图是开虚拟化平台之前的跑分：</p>
-<p><img alt="" src="/images/202404251239401.png"/></p>
+<p><img alt="" src="/i/20240425123940.jpg"/></p>
 <p>下图是开虚拟化平台之后的跑分：</p>
-<p><img alt="" src="/images/202404251239192.png"/></p>
+<p><img alt="" src="/i/20240425123919.jpg"/></p>
 <p>为了保证跑分结果准确，我特意在两种情况下多跑了几次，分值都差不多。主要的损失来自于 CPU，而 CPU12%的性能损失还是挺严重的。</p>
 <p>这实际上不是 WSL 的锅，而是因为 Hyper-V，开启虚拟化之后 Windows 宿主机也会变成一个 Hyper-V 的虚拟机，而这个变化通常情况下是无感的，但是 ... 我要打游戏 ...</p>
 <p>于是只能去掉 WSL2，使用 scoop 来进行环境搭建。实际上 scoop 超乎了我的预期，它不仅可以装开发软件，甚至微信 QQ 这种日常生活软件也可以安装，而且第三方开发者提供的各种 buckets 包含了极多的软件！</p>
@@ -28,7 +28,7 @@ scoop install coreutils
 <pre><code class="lang-powershell">scoop bucket add extras
 scoop install windows-terminal
 </code></pre>
-<p><img alt="" src="/images/202404251248248.png"/></p>
+<p><img alt="" src="/i/20240425124824.jpg"/></p>
 <p>官方的 buckets 里面只有少数的软件，而我们要想安装其它国人日常使用的软件就需要添加几个 buckets：</p>
 <pre><code class="lang-bash">scoop bucket add lemon https://github.com/hoilc/scoop-lemon
 scoop bucket add dorado https://github.com/chawyehsu/dorado
@@ -47,7 +47,7 @@ scoop bucket add dorado https://github.com/chawyehsu/dorado
 }
 </code></pre>
 <p>安装 languageserver 和 httpgd 包之后就可以很方便的出图了，与 VScode 集成在一起。</p>
-<p><img alt="" src="/images/202404251306446.png"/></p>
+<p><img alt="" src="/i/20240425130644.jpg"/></p>
 <p>再给 CRAN 和 Bioconductor 换源：</p>
 <pre><code class="lang-r">options("repos" = c(CRAN="https://mirrors.tuna.tsinghua.edu.cn/CRAN/"))
 options(BioC_mirror="https://mirrors.tuna.tsinghua.edu.cn/bioconductor")
@@ -188,5 +188,5 @@ scoop cache rm *        # 清理缓存
 scoop update            # 更新 scoop 和 buckets
 </code></pre>
 <p>不需要再一个个下载安装包一直点下一步了。总之感觉是挺舒服的~</p>
-<p><img alt="" src="/images/202404251307232.png"/></p>
-<p><img alt="" src="/images/202404251308817.png"/></p>
+<p><img alt="" src="/i/20240425130723.jpg"/></p>
+<p><img alt="" src="/i/20240425130881.jpg"/></p>
