--- a/yuanj.top/最新版 HMMER 查找同源基因.html
+++ b/yuanj.top/最新版 HMMER 查找同源基因.html
@@ -1,15 +1,15 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/最新版hmmer查找同源基因.md">仓库源文</a>，<a href="https://yuanj.top/posts/t0d2x7f6">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/the-latest-version-of.md">仓库源文</a>，<a href="https://yuanj.top/the-latest-version-of">站点原文</a></h2>
 <p>pfam 数据库更新了，原有的下载 hmm 模型与种子文件的方法需要进行一些改变。</p>
 &lt;!--more--&gt;
 
-<p><img alt="" src="/images/202310101943037.png"/></p>
+<p><img alt="" src="/i/20231010194303.jpg"/></p>
 <p>pfam 官网已经通知，将数据迁移到 <a href="https://www.ebi.ac.uk/interpro/">interpro</a> 了，所以之前下载 hmm 模型的方法已经不适应了，需要进行一些改变。</p>
 <p>打开 <a href="https://www.ebi.ac.uk/interpro/">interpro</a> 网站，首页往下翻，找到 pfam</p>
-<p><img alt="" src="/images/202310101946555.png"/></p>
+<p><img alt="" src="/i/20231010194655.jpg"/></p>
 <p>搜索结构域</p>
-<p><img alt="" src="/images/202310101946291.png"/></p>
+<p><img alt="" src="/i/20231010194629.jpg"/></p>
 <p>进入结构域的详情页面，点击左栏的 Alignment，选择 seed 然后下载种子文件，下载后是一个压缩包，解压后是 SEED.ann 文件，与之前旧版数据库里的 PFseed_xxxx.txt 是一样的。</p>
-<p><img alt="" src="/images/202310101950962.png"/></p>
+<p><img alt="" src="/i/20231010195096.jpg"/></p>
 <p>接着再点击左栏的 Curation，下载 hmm 模型文件。</p>
-<p><img alt="" src="/images/202310101952002.png"/></p>
+<p><img alt="" src="/i/20231010195200.jpg"/></p>
 <p>之后的 HMMER 的使用就和之前一样，没什么变化了。</p>
