--- a/yuanj.top/记录我入坑生信的经历.html
+++ b/yuanj.top/记录我入坑生信的经历.html
@@ -1,4 +1,4 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/记录我入坑生信的经历.md">仓库源文</a>，<a href="https://yuanj.top/posts/iwe898wf">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/experience-of-bioinformatics.md">仓库源文</a>，<a href="https://yuanj.top/experience-of-bioinformatics">站点原文</a></h2>
 <p>记录我入坑生信的经历。</p>
 &lt;!--more--&gt;
 
@@ -10,10 +10,10 @@
 <p>我们队的项目是关于水稻 OsSGL2 基因的，项目的实验流程中，第一部分就是生信分析，当时由于我在宜宾校区无法参加线下实验，于是吴龙英师姐便让我负责生信部分，做完之后，黄老师和师姐对我所做的结果评价还不错，于是又让我做了更多的分析。当时课题组是研究生轮转带本科生，跟吴龙英师姐做了两周后我又轮转到姜南师兄组，也是做生信分析，越做越上头 ... 在姜南师兄组做了两个礼拜后，黄老师和师兄对我那两周所做的结果也是评价不错，于是乎，后面就一直做生信分析。</p>
 <p>在这期间，我也对生信分析表现出了极大的兴趣，我以前不知道，在一串序列的背后能够发掘出那么多信息 ...</p>
 <p>贴几张我做的图片~</p>
-<p><img alt="" src="/images/20230825204439.png"/></p>
-<p><img alt="" src="/images/20230825204530.png"/></p>
-<p><img alt="" src="/images/20230825204555.png"/></p>
-<p><img alt="" src="/images/20230825204628.png"/></p>
+<p><img alt="" src="/i/20230825204439.jpg"/></p>
+<p><img alt="" src="/i/20230825204530.jpg"/></p>
+<p><img alt="" src="/i/20230825204555.jpg"/></p>
+<p><img alt="" src="/i/20230825204628.jpg"/></p>
 <h2>开始写博客</h2>
 <p>当我掌握了一些基础的分析之后，黄老师和吴龙英师姐希望我也可以教其他人做一些基础的分析，于是乎，便有了如今的博客。</p>
 <p>基因家族鉴定那篇原本是黄老师安排我和杜志烨师兄一起写的，当时 ... 有一天放假睡不着，我就起来写，写到凌晨五点居然写完了，经过师兄和老师的几番修改，就有了如今的教程，我还会不断地更新，以期达到更好的效果，帮助更多的同学入生信。我本身其实是环境科学与工程专业的，入生信可以说是零基础，所以入门的一些坑我很清楚，所以写的比较通俗易懂，也收到了一些同学的好评。关于一些很复杂或者难懂的步骤，我录了一些视频，在哔哩哔哩，也收到一些好评。</p>
