--- a/yuanj.top/近乡情更怯.html
+++ b/yuanj.top/近乡情更怯.html
@@ -1,4 +1,4 @@
-<h2><a href="https://github.com/yuanj82/yuanj.top/blob/master/content/posts/近乡情更怯.md">仓库源文</a>，<a href="https://yuanj.top/posts/gif8gf">站点原文</a></h2>
+<h2><a href="https://github.com/imjiaoyuan/imjiaoyuan.github.io/blob/master/content/p/feel-more-timid.md">仓库源文</a>，<a href="https://yuanj.top/feel-more-timid">站点原文</a></h2>
 <p>今天又回南湖了，感觉每次回来的感觉都不太一样，每次回来的时候心里都有一些小紧张😂</p>
 &lt;!--more--&gt;
 
@@ -9,7 +9,7 @@
 <li>搭建了新的博客，之前使用的是 hexo，感觉太花里胡哨，丢失了我写博客的本意，而且也需要花很多时间去维护。最后折腾几天，使用了 hugo 框架及 LoveIt 主题搭建了如今的博客</li>
 <li>为课题组搭建了主页，还是用 hugo，水平实在有限 ...</li>
 <li>赚了小点点钱，先是在敦煌的鸣沙山景区搭帐篷做工，后来到我哥朋友的饭店门口摆摊卖水果，最后是在天河大酒店做客房服务员</li>
-<li>写了 <a href="https://github.com/catuncle4/auto-hmmer">auto-hmmer</a> 的项目，在大佬看来可能很垃圾，但对于我自己确实是方便了很多</li>
+<li>写了 <a href="https://github.com/imjiaoyuan/auto-hmmer">auto-hmmer</a> 的项目，在大佬看来可能很垃圾，但对于我自己确实是方便了很多</li>
 <li>与朋友小聚几次，喝了几次酒 ...</li>
 <li>写了一些公众号推文与博客文章</li>
 <li>完成了许淑霞老师的书籍撰写任务</li>
@@ -17,7 +17,7 @@
 </ul>
 <h2>感受</h2>
 <p>南湖其实是旧称，现在叫阳关镇，是一个距离敦煌市区 70 多公里的小镇</p>
-<p><img alt="" src="/images/20230824235728.png"/></p>
+<p><img alt="" src="/i/20230824235728.jpg"/></p>
 <p>这里的一草一木我都很熟悉，但年龄越大感觉越陌生。我从小一直在这里，直到上高中才去市区，还记得我高二那一次分手非常伤心，第二天就回来了，感觉这里的人和这里的事物总能抚慰我的心，这片土地像是我复杂心灵中的一块世外桃源，在这里我不需要在意很多，因为最重要的人还在我身边。</p>
 <p>我早就下定决心，以后一定会带着最爱的人来这里，跟她讲述我的故事，我在这里的经历，带她去见小学门口的大叔，带她去看小时候奔走的草地。</p>
 <p>但愿这里的一切能够慢一些被改变</p>
